t+ha:[[siket]] ([[WT:EDIT|Assisted]]) <skirt#47546536>

--- a/en/s/skirt.7203.wikitext
+++ b/en/s/skirt.7203.wikitext
@@ -91,6 +91,7 @@
 * Georgian: {{t|ka|ქვედაკაბა}}, {{t|ka|ქვედატანი}}
 * German: {{t+|de|Rock|m}}
 * Greek: {{t+|el|φούστα|f}}
+* Hausa: {{t|ha|siket}}
 * Hebrew: {{t+|he|חֲצָאִית|f|tr=khatsa'ít}}
 * Hindi: {{t|hi|स्कर्ट|f|sc=Deva}}
 * Hungarian: {{t+|hu|szoknya}}, {{t+|hu|alj}}
