/* Derived terms */ [[cowflesh]], [[swineflesh]] <flesh#47557774>

--- a/en/f/flesh.6883.wikitext
+++ b/en/f/flesh.6883.wikitext
@@ -266,6 +266,7 @@ From {{etyl|enm|en}} {{m|enm|flesh}}, from {{etyl|ang|en}} {{m|ang|flǣsc}}, fro
 ===Derived terms===
 {{rel-top3|Terms derived from the noun or verb ''flesh''}}
 * {{l|en|cockflesh}}
+* {{l|en|cowflesh}}
 * {{l|en|dickflesh}}
 * {{l|en|exchange flesh}}
 * {{l|en|flesh and blood}}
@@ -286,6 +287,7 @@ From {{etyl|enm|en}} {{m|enm|flesh}}, from {{etyl|ang|en}} {{m|ang|flǣsc}}, fro
 * {{l|en|pound of flesh}}
 * {{l|en|press the flesh}}
 * {{l|en|proud flesh}}
+* {{l|en|swineflesh}}
 * {{l|en|way of all flesh}}
 {{rel-bottom}}
 
