--- a/en/旱/旱.16921.wikitext
+++ b/en/旱/旱.16921.wikitext
@@ -35,7 +35,10 @@
 ===Definitions===
 {{zh-hanzi}}
 
-# {{rfdef|zh}}
+# [[dry]]; [[arid]]
+# on [[land]]
+# [[drought]]; [[dry]] [[spell]]; [[aridness]]
+# {{zh-abbrev|墨旱蓮}}
 
 ====Compounds====
 {{zh-der|旱冰|旱船|旱道|旱道兒|旱稻|旱稻兒|旱地|旱季|旱井|旱澇|旱澇保收|旱路|旱年|旱橋|旱情|旱傘|旱生植物|旱獺|旱天|旱田|旱象|旱鴨子|旱煙|旱煙袋|旱秧田|旱災|亢旱|久旱不雨|天旱|乾旱|大旱雲霓|伏旱|旱魃為虐|旱船舞|水旱不收|旱祭|旱苗|撐旱船|旱苗得雨|水旱|水旱碼頭|抗旱|秋旱|旱軍|涔旱|旱麓|旱潦|旱魃|枯旱|旱煙筒|旱性植物|旱天雷|蟲霜水旱|苦旱|遍地荒旱|耐旱|起旱|荒旱|跑旱船}}
