--- a/en/s/speak.7214.wikitext
+++ b/en/s/speak.7214.wikitext
@@ -60,6 +60,7 @@ From {{etyl|enm|en}} {{m|enm|speken||to speak}}, from {{etyl|ang|en}} {{m|ang|sp
 
 ====Derived terms====
 {{rel-top|Terms derived from ''speak'' (verb)}}
+* {{l|en|forthspeak}}
 * {{l|en|public speaking}}
 * {{l|en|speakable}}
 * {{l|en|speaker}}
