--- a/en/傌/傌.11164.wikitext
+++ b/en/傌/傌.11164.wikitext
@@ -50,7 +50,7 @@
 ====Noun====
 {{zh-noun}}
 
-# {{lb|zh|Chinese chess}} the red '[[knight]]' piece
+# {{lb|zh|Chinese chess}} [[horse]]; [[knight]] (on the red side)
 
 =====Coordinate terms=====
 * {{list:Chinese chess pieces/zh}}
@@ -77,7 +77,7 @@
 ==Korean==
 
 ===Hanja===
-{{ko-hanja|hangeul=마|rv=ma|mr=ma}}
+{{ko-hanja|hangeul=마}}
 
 # {{defn|lang=ko|sort=人10}}
 
