--- a/en/圾/圾.12993.wikitext
+++ b/en/圾/圾.12993.wikitext
@@ -15,26 +15,38 @@
 
 ==Chinese==
 {{zh-forms}}
-
-===Pronunciation===
+===Etymology 1===
+====Pronunciation====
 {{zh-pron
 |m=圾
 |c=saap3,ngap6
 |mn=sap
-|cat=
+|cat=n
 }}
 
-===Definitions===
+====Definitions====
 {{zh-hanzi}}
 
-# {{rfdef|zh}}
+# {{zh-only|垃圾}}
 
 ====Compounds====
 {{zh-der|垃圾|垃圾分類|垃圾回收|垃圾堆|垃圾場|垃圾山|垃圾桶|垃圾相|垃圾筒|垃圾箱|垃圾車|垃圾量|垃圾食物|搭圾}}
 
-===References===
-* {{R:yue:Hanzi}}
 
+===Etymology 2===
+====Pronunciation====
+{{zh-pron
+|m=jié
+|cat=n
+}}
+
+====Definitions====
+{{zh-hanzi}}
+
+# [[clod]]
+
+===Etymology 3===
+{{zh-see|岌|v}}
 ----
 
 ==Japanese==
