--- a/en/垃/垃.13062.wikitext
+++ b/en/垃/垃.13062.wikitext
@@ -14,22 +14,32 @@
 ==Chinese==
 {{zh-forms}}
 
-===Pronunciation===
+===Pronunciation 1===
 {{zh-pron
 |m=垃
 |c=laap6
 |mn=ml:la̍p/qz,twv,xm,zz:lap/tw:lah
-|cat=
+|cat=n
+}}
+
+====Definitions====
+{{zh-hanzi}}
+
+# {{zh-only|垃圾}}
+
+=====Compounds=====
+{{zh-der|垃圾|垃圾分類|垃圾回收|垃圾堆|垃圾場|垃圾山|垃圾桶|垃圾相|垃圾筒|垃圾箱|垃圾車|垃圾量|垃圾食物}}
+
+===Pronunciation 2===
+{{zh-pron
+|m=lā
+|cat=n
 }}
 
 ===Definitions===
 {{zh-hanzi}}
 
-# {{rfdef|zh}}
-
-====Compounds====
-{{zh-der|垃圾|垃圾分類|垃圾回收|垃圾堆|垃圾場|垃圾山|垃圾桶|垃圾相|垃圾筒|垃圾箱|垃圾車|垃圾量|垃圾食物}}
-
+* {{zh-only|坷垃}}
 ----
 
 ==Japanese==
