--- a/en/圾/圾.12993.wikitext
+++ b/en/圾/圾.12993.wikitext
@@ -2,11 +2,7 @@
 ==Translingual==
 
 ===Han character===
-{{Han char|rn=32|rad=土|as=04|sn=7|four=47147|canj=GNHE|ids=⿰土及}}
-
-# [[garbage]], [[rubbish]]
-# [[shaking]]
-# [[danger]]
+{{Han char|rn=32|rad=土|as=04|sn=6|four=47147|canj=GNHE|ids=⿰土及}}
 
 ====References====
 * {{Han ref|kx=0224.220|dkj=04906|dj=0459.100|hdz=10420.040|uh=573E|ud=22334|bh=A7A3|bd=42915}}
@@ -18,7 +14,7 @@
 ===Etymology 1===
 ====Pronunciation====
 {{zh-pron
-|m=圾
+|m=jī
 |c=saap3,ngap6
 |mn=sap
 |cat=n
@@ -27,7 +23,7 @@
 ====Definitions====
 {{zh-hanzi}}
 
-# {{zh-only|垃圾}}
+# {{zh-only|垃圾|[[garbage]]; [[rubbish]]}}
 
 ====Compounds====
 {{zh-der|垃圾|垃圾分類|垃圾回收|垃圾堆|垃圾場|垃圾山|垃圾桶|垃圾相|垃圾筒|垃圾箱|垃圾車|垃圾量|垃圾食物|搭圾}}
