--- a/en/圾/圾.12993.wikitext
+++ b/en/圾/圾.12993.wikitext
@@ -11,11 +11,13 @@
 
 ==Chinese==
 {{zh-forms}}
+
 ===Etymology 1===
+
 ====Pronunciation====
 {{zh-pron
 |m=圾
-|c=saap3,ngap6
+|c=saap3
 |mn=sap
 |cat=n
 }}
@@ -29,6 +31,7 @@
 {{zh-der|垃圾|垃圾分類|垃圾回收|垃圾堆|垃圾場|垃圾山|垃圾桶|垃圾相|垃圾筒|垃圾箱|垃圾車|垃圾量|垃圾食物|搭圾}}
 
 ===Etymology 2===
+
 ====Pronunciation====
 {{zh-pron
 |m=jié
@@ -42,6 +45,7 @@
 
 ===Etymology 3===
 {{zh-see|岌|v}}
+
 ----
 
 ==Japanese==
