t+ar:[[آن]] t-balance ([[WT:EDIT|Assisted]]) <come#47606806>

--- a/en/c/come.6838.wikitext
+++ b/en/c/come.6838.wikitext
@@ -155,7 +155,7 @@ The meaning of ''to ejaculate'' is considered rude slang. Many style guides and 
 * Abkhaz: {{t|ab|аара}}
 * Afrikaans: {{t|af|kom}}
 * Albanian: {{t+|sq|vij}}
-* Arabic: {{t|ar|جَاءَ}}, {{t+|ar|أَتَى}}
+* Arabic: {{t|ar|جَاءَ}}, {{t+|ar|أَتَى}}, {{t+|ar|آنَ}}
 *: Egyptian Arabic: {{t|arz|جا|tr=gā|sc=Arab}}, {{t|arz|جه|tr=geh|sc=Arab}}
 *: Hijazi Arabic: {{t|acw|جا|tr=jā|sc=Arab}}
 *: Tunisian Arabic: {{t|aeb|جاء|tr=jāʾ|sc=Arab}}
@@ -220,9 +220,9 @@ The meaning of ''to ejaculate'' is considered rude slang. Many style guides and 
 * Latvian: {{t+|lv|nākt}}
 * Lithuanian: {{t+|lt|ateiti}}
 * Lojban: {{t+|jbo|klama}}
+{{trans-mid}}
 * Lü: {{t|khb|ᦙᦱ}}
 * Macedonian: {{t|mk|дојде|pf}}, {{t|mk|доаѓа|impf}}
-{{trans-mid}}
 * Malay: {{t+|ms|datang}}, {{t|ms|mari}}
 * Maltese: {{t|mt|ġie}}
 * Manchu: {{t|mnc|jimbi|sc=Mong}}
