--- a/en/昃/昃.16939.wikitext
+++ b/en/昃/昃.16939.wikitext
@@ -4,17 +4,13 @@
 ===Han character===
 {{Han char|rn=72|rad=日|as=04|sn=8|four=60281|canj=AMO|ids=⿱日仄}}
 
-# [[afternoon]]
-# the [[sun]] in the afternoon [[sky]]
-# to [[decline]]
-
 ====References====
 * {{Han ref|kx=0490.350|dkj=13785|dj=0852.020|hdz=21489.030|uh=6603|ud=26115|bh=CCCA|bd=52426}}
 
 ----
 
 ==Chinese==
-{{zh-forms}}
+{{zh-forms|alt=𣅔,𣅳,昗,𣅛,𣅦}}
 
 ===Glyph origin===
 {{Han etym}}
@@ -31,7 +27,7 @@
 ===Definitions===
 {{zh-hanzi}}
 
-# {{rfdef|zh}}
+# sun slants to west
 
 ====Compounds====
 {{zh-der|日昃|昃食宵衣|日昃忘食|日中則昃|昏昃|昃晷}}
