--- a/en/昗/昗.16959.wikitext
+++ b/en/昗/昗.16959.wikitext
@@ -4,34 +4,13 @@
 ===Han character===
 {{Han char|rn=72|rad=日|as=04|sn=8|four=|canj=AYC|ids=⿱[[日]][[六]]}}
 
-# (same as [[昃]]) [[afternoon]]
-# the [[sun]] in the afternoon [[sky]]
-# to [[decline]]
-
 ====References====
 * {{Han ref|kx=0492.121|dkj=13788|hdz=21496.010|uh=6617|ud=26135}}
-* [http://yedict.com/htm/66/6617.htm yedict.com (叶典)]
 
 ----
 
-==Cantonese==
-
-===Hanzi===
-{{yue-hanzi|jyut=[[zak1]]|y=jak1}}
-
-# {{defn|lang=yue|sort=日04}}
-
-====References====
-* (''Cantonese'') [http://www.iso10646hk.net/jp/document/download.jsp Jyutping Database (iso10646hk.net) - Cantonese Pronunciation List (Part 2), p. 122]
-
-----
-
-==Mandarin==
-
-===Hanzi===
-{{cmn-hanzi|pin=[[zè]] ([[ze4]])|wg=tse<sup>4</sup>}}
-
-# {{defn|lang=cmn|sort=日04}}
+==Chinese==
+{{zh-see|昃|v}}
 
 ----
 
