--- a/en/p/play.8442.wikitext
+++ b/en/p/play.8442.wikitext
@@ -107,6 +107,7 @@ The noun is from {{etyl|enm|en}} {{m|enm|pleye}}, from {{etyl|ang|en}} {{m|ang|p
 *: Syriac: {{t|syc|ܫܥܐ|tr=šʿa|sc=Syrc}}
 * Armenian: {{t+|hy|խաղալ}}
 * Aromanian: {{t|rup|gioc}}
+* Assamese: {{t|as|খেলা}}
 * Asturian: {{t|ast|xugar}}
 * Basque: {{t|eu|joka}}
 * Belarusian: {{t|be|граць|impf}}, {{t|be|ігра́ць|impf}}
