--- a/en/態/態.15710.wikitext
+++ b/en/態/態.15710.wikitext
@@ -36,7 +36,8 @@
 {{zh-hanzi}}
 
 # [[condition]]; [[form]]; [[shape]]
-# [[state]]; [[attitude]]; [[behavior]]
+# [[state]]; 
+# [[manner]]; [[bearing]]; [[attitude]]
 # [[situation]]; [[posture]]
 # [[metamorphosis]]; [[abnormality]]; [[peversion]]
 # {{lb|zh|grammar}} [[voice]]; [[diathesis]]
