--- a/en/s/saffron.4771.wikitext
+++ b/en/s/saffron.4771.wikitext
@@ -4,7 +4,7 @@
 [[Image:Iran saffron threads.jpg|thumb|'''saffron''' (spice): the dried threads from the stigma of ''Crocus sativus'']]
 
 ===Etymology===
-From {{etyl|fro|en}} {{m|fro|safran}}, from {{etyl|ML.|en}} {{m|la|safranum}}, from {{etyl|ar|en}} {{m|ar|زَعْفَرَان}}, from {{etyl|fa|en}} {{m|fa|tr=zar-parân|*زرپران|lit=with golden leaves}}.
+From {{etyl|fro|en}} {{m|fro|safran}}, from {{etyl|ML.|en}} {{m|la|safranum}}, from {{etyl|ar|en}} {{m|ar|زَعْفَرَان}}, from {{etyl|fa|en}} {{m|fa|tr=*zar-parân|*زرپران|lit=with golden leaves}}.
 
 ===Noun===
 {{en-noun|~}}
