--- a/en/c/count.8441.wikitext
+++ b/en/c/count.8441.wikitext
@@ -345,6 +345,7 @@ From {{inh|en|enm|counten}}, borrowed from {{bor|en|xno|conter|notext=1}}, from 
 * Hebrew: {{t|he|רוזן|m|tr=rozen|sc=Hebr}}
 * Hungarian: {{t+|hu|gróf}}
 * Icelandic: {{t+|is|greifi|m}}
+* Ido: {{t+|io|komto}}
 {{trans-mid}}
 * Irish: {{t|ga|cunta|m}}, {{t|ga|cuntaí|m-p}}
 * Italian: {{t+|it|conte}}
