--- a/en/s/substance.7215.wikitext
+++ b/en/s/substance.7215.wikitext
@@ -209,6 +209,7 @@ Borrowed from {{etyl|la|fr}} {{m|la|substantia||substance, essence}}, from {{m|l
 ===Pronunciation===
 * {{audio|Fr-substance.ogg|audio|lang=fr}}
 * {{IPA|/syp.stɑ̃s/|lang=fr}}
+* {{rhymes|ɑ̃s|lang=fr}}
 
 ===Noun===
 {{fr-noun|f}}
