--- a/en/昆/昆.16942.wikitext
+++ b/en/昆/昆.16942.wikitext
@@ -5,8 +5,6 @@
 ===Han character===
 {{Han char|rn=72|rad=日|as=04|sn=8|four=60711|canj=APP|ids=⿱日比}}
 
-# [[elder]] [[brother]]
-# [[descendant]]s
 
 ====Derived terms====
 * {{l|mul|混}}
@@ -22,8 +20,8 @@
 ===Glyph origin===
 {{Han etym}}
 {{Han compound|ls=ic|日|比}}.
-
-===Pronunciation===
+===Etymology 1===
+====Pronunciation====
 {{zh-pron
 |m=kūn
 |c=kwan1,gwan1
@@ -31,17 +29,37 @@
 |mn-t=kung1
 |mc=y
 |oc=y
-|cat=n
+|cat=n,a,adv
 }}
 
-===Definitions===
+====Definitions====
 {{zh-hanzi}}
 
-# {{rfdef|zh}}
-
-====Compounds====
+# [[simultaneously]]
+# [[elder]] [[brother]]
+# [[descendant]]s
+# [[later]]
+# [[numerous]]
+# a kind of animal
+# {{zh-alt-form|焜}}
+# {{surname|lang=zh}}
+=====Compounds=====
 {{zh-der|公昆弟|垂裕後昆|寄生昆蟲|後昆|昆仲|昆吾|昆士蘭|昆夷|昆季|昆布|昆弟|昆弟之好|昆明市|昆明池|昆明湖|昆池劫灰|昆玉|昆蟲|昆蟲學|昆蟲綱|昆裔|昆邪|昆陽|玉昆金友|賢昆仲|賢昆玉|金友玉昆}}
 
+===Etymology 2===
+====Pronunciation====
+{{zh-pron
+|m=hún
+|cat=a
+}}
+
+====Definitions====
+{{zh-hanzi}}
+
+# {{zh-only|昆侖|alternative form of [[渾淪]]|tr=húnlún}}
+
+===Etymology 3===
+{{zh-see|混|v}}
 ===References===
 * {{R:yue:Hanzi}}
 
