--- a/en/慎/慎.15713.wikitext
+++ b/en/慎/慎.15713.wikitext
@@ -28,7 +28,7 @@ Note the different forms, corresponds to different forms of [[真]].
 |mn=sīn/twv:sīm
 |mc=
 |oc=y
-|cat=
+|cat=a
 }}
 
 ===Definitions===
