t+mr:[[खेळणे]] ([[WT:EDIT|Assisted]]) <play#47672340>

--- a/en/p/play.8442.wikitext
+++ b/en/p/play.8442.wikitext
@@ -156,6 +156,7 @@ The noun is from {{etyl|enm|en}} {{m|enm|pleye}}, from {{etyl|ang|en}} {{m|ang|p
 *: German Low German: {{t|nds-de|spelen}}
 * Macedonian: {{t|mk|игра|impf}}
 * Malay: {{t|ms|bermain}}
+* Marathi: {{t|mr|खेळणे}}
 * Navajo: {{t|nv|naashné}}
 * Neapolitan: {{t|nap|pazzià}}
 * Ngazidja Comorian: {{t|zdj|tsapvuha|alt=utsapvuha}}
