--- a/en/i/icon.6837.wikitext
+++ b/en/i/icon.6837.wikitext
@@ -43,6 +43,7 @@ From {{etyl|la|en}} {{m|la|icon}}, from {{etyl|grc|en}} {{m|grc|εἰκών||lik
 * Catalan: {{t+|ca|icona|f}}
 * Danish: {{t|da|ikon|c}}
 * Dutch: {{t+|nl|icoon|f|m}}
+* Esperanto: {{t|eo|piktogramo}}
 * Finnish: {{t+|fi|ikoni}}, {{t+|fi|symboli}}
 * French: {{t+|fr|icône|f}}
 * Galician: {{t|gl|icona|f}}
@@ -163,6 +164,7 @@ From {{etyl|la|en}} {{m|la|icon}}, from {{etyl|grc|en}} {{m|grc|εἰκών||lik
 *: Mandarin: {{t|cmn|圖標|sc=Hani}}, {{t|cmn|图标|tr=túbiāo|sc=Hani}}
 * Czech: {{t+|cs|ikona|f}}
 * Dutch: {{t+|nl|icoon|f|m}}, {{t+|nl|pictogram|n}}
+* Esperanto: {{t|eo|piktogramo}}
 * Finnish: {{t+|fi|kuvake}}
 * French: {{t+|fr|icon|m}}
 * Galician: {{t|gl|icona|f}}
