--- a/en/c/come.6838.wikitext
+++ b/en/c/come.6838.wikitext
@@ -110,6 +110,7 @@ The meaning of ''to ejaculate'' is considered rude slang. Many style guides and 
 
 =====Derived terms=====
 {{der3|lang=en|title=Terms derived from ''come'' (verb)
+| {{l|en|become}}
 | {{l|en|come about}}
 | {{l|en|come across}}
 | {{l|en|come after}}
