--- a/en/昷/昷.16992.wikitext
+++ b/en/昷/昷.16992.wikitext
@@ -24,8 +24,14 @@
 ===Glyph origin===
 {{Han etym}}
 
-===Definitions===
+===Etymology 1===
 {{zh-see|𥁕|sv}}
+
+===Etymology 2===
+{{zh-see|溫|v}}
+
+===Etymology 3===
+{{zh-see|𣌬|v}}
 
 ----
 
