--- a/en/u/United States of America.2102.wikitext
+++ b/en/u/United States of America.2102.wikitext
@@ -27,6 +27,7 @@
 * {{l|en|land of the free}} {{qualifier|figurative}}
 
 ====Translations====
+{{RFV|got|Gothic translation}}
 {{trans-top|id=Q30|Country in North America}}
 * Abkhaz: {{t|ab|Америка Еиду Аштатқәа|sc=Cyrl}}
 * Adyghe: {{t|ady|Америкэ Штат Зэхэтхэр}}
