--- a/en/u/United States of America.2102.wikitext
+++ b/en/u/United States of America.2102.wikitext
@@ -162,6 +162,7 @@
 *: Lower Sorbian: {{t|dsb|Zjadnośone staty Ameriki|m-p}}
 *: Upper Sorbian: {{t|hsb|Zjednoćene staty Ameriki|m-p}}
 * Sotho: {{t|st|Amerika}}
+* Southern Altai: {{t|alt|Америка Кошмо Штаттары|tr=Amerika kośmo Śtattarı|sc=Cyrl}}
 * Spanish: {{t+|es|Estados Unidos de América|m-p}}, {{t+|es|Estados Unidos|m-p}}, {{t+|es|EE. UU.|m-p}}, {{t+|es|EEUU|m-p}}
 * Swahili: {{t|sw|Muungano wa Madola ya Amerika}}
 * Swedish: {{t+|sv|Amerikas förenta stater}}, {{t+|sv|Förenta staterna}}, {{t+|sv|USA}}, {{t|sv|Staterna}}
