--- a/en/s/spelt.7213.wikitext
+++ b/en/s/spelt.7213.wikitext
@@ -111,7 +111,7 @@ From {{etyl|gml|da}} {{m|gml|spelte}}.
 ===Noun===
 {{da-noun|en|-}}
 
-# {{l|en|spelt}} {{gloss|a type of wheat, ''[[Triticum spelta]]''}}}
+# {{l|en|spelt}} {{gloss|a type of wheat, ''[[Triticum spelta]]''}}
 
 ===Further reading===
 * {{pedialite|lang=da}}
