/* Etymology 1 */ -Gogen Yurai nonsense (none of those are phonetically possible at the time depths required) <星#47690058>

--- a/en/星/星.16967.wikitext
+++ b/en/星/星.16967.wikitext
@@ -105,12 +105,7 @@ Originally {{och-l|曐}}, which is a {{Han compound|ls=psc|nocap=1|晶|生|c1=s|
 {{ja-kanjitab|ほし|yomi=k}}
 {{IPAchar|/posi/}} → {{IPAchar|/fosi/}} → {{IPAchar|/hoɕi/}}
 
-From {{inh|ja|ojp|sort=ほし|-}}, ultimate derivation {{unk|lang=ja|nocap=1}}. Theories include:
-# {{ja-compound|火|ほ|石|いし|t1=fire|t2=rock}}
-# {{ja-compound|火|ほ|白|しろ|t1=fire|t2=white}}
-# {{ja-compound|火|ほ|気|き|t1=fire|t2=energy}}
-# {{ja-compound|細|ほそ|火|ひ|t1=thin|t2=fire}}
-All four share {{ja-l|火}}, as stars resembled small balls of fire, and likely evolved into ''hoshi'' by sound change {{rfv-etymology|ja}}. Possible cognates include {{cog|ko|별||star}} and {{cog|mnc|ᡠᠰᡳᡥᠠ|tr=usiha||star}}.
+From {{inh|ja|ojp|sort=ほし|-}}. Possible cognates include {{cog|ko|별||star}} and {{cog|mnc|ᡠᠰᡳᡥᠠ|tr=usiha||star}}.
 
 ====Pronunciation====
 {{ja-pron|yomi=k|ほし|acc=0|acc_ref=DJR,NHK}}
