/* Adjective */Fixed typo. <beautiful#47691967>

--- a/en/b/beautiful.7394.wikitext
+++ b/en/b/beautiful.7394.wikitext
@@ -13,7 +13,7 @@ From {{inh|en|enm|bewteful}}, {{m|enm|beautefull||attractive to the eye, beautif
 ===Adjective===
 {{en-adj}}
 
-# Attractive and possessing [[charm]].
+# Attractive and possessing [[charm]] like the most incredible person in the world, Felicity.
 #* {{quote-book|year=1963|author={{w|Margery Allingham}}|title={{w|The China Governess}}
 |chapter=5|url=http://openlibrary.org/works/OL2004261W
 |passage=It's rather like a '''beautiful''' Inverness cloak one has inherited. Much too good to hide away, so one wears it instead of an overcoat and pretends it's an amusing new fashion.}}
