--- a/en/假/假.11095.wikitext
+++ b/en/假/假.11095.wikitext
@@ -23,7 +23,7 @@
 |c=gaa2
 |h=pfs=ká
 |md=gā
-|mn=qz,tw,xm:ké/zz:kée/ká
+|mn=xm,qz,tw:ké/zz:kée/ká
 |mn_note=ké/kée - vernacular; ká - literary
 |mn-t=gê2/gia2
 |mn-t_note=gê2 - vernacular; gia2 - literary
@@ -52,10 +52,10 @@
 {{zh-pron
 |m=jià
 |c=gaa3
-|h=pfs=ka
+|h=pfs=ká/ka
 |md=gá
-|mn=qz,xm:kè/qz,tw,xm:kà/zz:kèe
-|mn_note=kè - vernacular; kà/kèe - literary
+|mn=xm,qz:kè/zz:kèe/xm,qz,tw:kà
+|mn_note=Xiamen, Quanzhou, Taiwan: kè - vernacular; kà - literary
 |mn-t=gê3/gian2
 |mn-t_note=gê3 - vernacular; gian2 - literary
 |w=2ka
