--- a/en/慌/慌.15711.wikitext
+++ b/en/慌/慌.15711.wikitext
@@ -4,9 +4,8 @@
 ===Han character===
 {{Han char|rn=61|rad=心|as=10|sn=13|four=94011|canj=PTYU|ids=⿰忄荒}}
 
-# [[nervous]], [[panicky]], [[frantic]]
-
-Note: The right-middle part could be found as [[亾]] instead of [[亡]].
+====Usage notes====
+The right-middle part could be found as [[亾]] instead of [[亡]].
 
 ====References====
 * {{Han ref|kx=0398.090|dkj=11057|dj=0737.090|hdz=42326.070|uh=614C|ud=24908|bh=B757|bd=46935}}
