--- a/en/h/hamstring.7218.wikitext
+++ b/en/h/hamstring.7218.wikitext
@@ -32,8 +32,10 @@
 ===Verb===
 {{en-verb|hamstrings|hamstringing|hamstrung|past2=hamstringed}}
 
-# {{lb|en|transitive}} To [[lame]] or [[disable]] by [[cut]]ting the [[tendon]]s of the [[ham]] or [[knee]]; to [[hough]]; hence, to [[cripple]]; to [[incapacitate]]; to [[disable]].
-#: {{syn|en|hock|hough|hox|cripple|incapacitate|disable}}
+# {{lb|en|transitive}} To [[lame]] or [[disable]] by [[cut]]ting the [[tendon]]s of the [[ham]] or [[knee]]; to [[hough]].
+#: {{syn|en|hock|hough|hox}}
+# {{lb|en|transitive|figurative}} To [[cripple]]; to [[incapacitate]]; to [[disable]]. {{defdate|from 1640s}}
+#: {{syn|en|cripple|incapacitate|disable}}
 #* So have they '''hamstrung''' the valor of the subject by seeking to effeminate us all at home. - [[w:John Milton|John Milton]]
 
 ====Hypernyms====
