--- a/en/s/speak.7214.wikitext
+++ b/en/s/speak.7214.wikitext
@@ -70,6 +70,7 @@ From {{etyl|enm|en}} {{m|enm|speken||to speak}}, from {{etyl|ang|en}} {{m|ang|sp
 * {{l|en|speakeasy}}
 * {{l|en|speakworthy}}
 * {{l|en|re-speak}}
+* {{l|en|unspeak}}
 * {{l|en|unspeakable}}
 * {{l|en|withspeak}}
 
