--- a/en/慘/慘.15724.wikitext
+++ b/en/慘/慘.15724.wikitext
@@ -32,8 +32,11 @@
 ===Definitions===
 {{zh-hanzi}}
 
-# [[sad]], [[pitiful]], [[wretched]]
+# [[miserable]], [[pitiful]], [[wretched]]
 # [[cruel]]
+
+====Compounds====
+{{zh-der|慘重|慘劇|慘痛|慘叫|慘遭|慘白|慘案|慘淡|慘烈|慘死|慘象|慘相|慘景|慘境|慘兮兮|累慘|悲慘|淒慘|慘敗|慘事|慘不忍睹|淒淒慘慘|慘戚|慘慘戚戚|慘不人道|慘無人道|前景慘淡|悲慘世界}}
 
 ----
 
