--- a/en/s/skirt.7203.wikitext
+++ b/en/s/skirt.7203.wikitext
@@ -133,7 +133,7 @@
 * Slovak: {{t+|sk|sukňa|f}}
 * Slovene: {{t+|sl|krilo|n}}
 * Spanish: {{t+|es|falda|f}}, {{t+|es|enaguas|f-p}} {{qualifier|Costa Rica|Nicaragua}}, {{t+|es|pollera|f}} {{qualifier|Argentina|Chile|Paraguay|Uruguay}}, {{t|es|saya|f}} {{qualifier|Cuba}}
-* Swahili: {{t|sw|skati}}
+* Swahili: {{t|sw|sketi}}
 * Swedish: {{t+|sv|kjol|c}}
 * Tajik: {{t|tg|доман}}
 * Taos: {{t|twf|yúwolaną}}
@@ -243,7 +243,6 @@
 * Persian: {{t-check|fa|دامن دوخت|sc=fa-Arab}}
 * Romanian: {{t-check|ro|pulpană|f}}
 * Slovak: {{t-check|sk|bočnica|f}}
-* Swahili: {{t-check|sw|skati|c9|c10}}
 * Tagalog: {{t-check|tl|saya}}
 * Thai: {{t+check|th|กระโปรง|tr=grà-bpronge}}
 * Turkish: {{t-check|tr|etek}}
