--- a/en/偉/偉.11097.wikitext
+++ b/en/偉/偉.11097.wikitext
@@ -39,13 +39,13 @@ Note that in Japanese [[shinjitai]], the bottom component of [[韋]] is written 
 ===Definitions===
 {{zh-hanzi}}
 
-# [[extraordinary]], [[magnificent]], [[great]], [[robust]]
+# [[extraordinary]]; [[magnificent]]; [[great]]; [[robust]]
 
 ====Antonyms====
-* {{l|zh|庸}}, {{l|zh|凡}} ([[ordinary]], [[mediocre]])
+* {{zh-l|庸}}, {{zh-l|凡}}
 
-====Compounds====
-{{zh-der|偉大|宏偉|雄偉}}
+===Compounds===
+{{zh-der|偉大|宏偉|雄偉|偉服|偉麗|偉懋|厥功甚偉|恢偉|俊偉|宏偉壯觀|厥功至偉|偉岸|傀偉|奇偉|偉晶岩|偉業|偉器|壯偉|偉績|偉人|偉丈夫|氣勢雄偉|衣冠甚偉|英才俊偉|雄材偉略|豐偉|魁梧奇偉|魁偉|豐功偉業|鉅卿偉公|雄偉壯麗|英風偉烈|豐功偉績}}
 
 ----
 
