--- a/en/l/lies.16986.wikitext
+++ b/en/l/lies.16986.wikitext
@@ -135,6 +135,18 @@
 
 ----
 
+==Livonian==
+
+===Etymology===
+Borrowing from Latvian ''[[liesa]]''.
+
+===Noun===
+{{head|liv|noun}}
+
+# [[spleen]]
+
+----
+
 ==Luxembourgish==
 
 ===Verb===
