--- a/en/偌/偌.11100.wikitext
+++ b/en/偌/偌.11100.wikitext
@@ -12,9 +12,11 @@
 ----
 
 ==Chinese==
+
+===Etymology 1===
 {{zh-forms}}
 
-===Pronunciation 1===
+====Pronunciation====
 {{zh-pron
 |m=ruò
 |c=je6
@@ -22,44 +24,79 @@
 |h=pfs=
 |md=
 |mn=
+|mn-t=ria2
 |w=
 |mc=y
 |oc=y
-|cat=
+|cat=adv
 }}
 
 ====Definitions====
 {{zh-hanzi}}
 
-# so; that
+# [[so]]; [[that]]
 #: {{zh-x|偌大 年紀|'''so''' old}}
 
-===Pronunciation 2===
+====Compounds====
+{{zh-der|偌多|偌時|偌大}}
+
+===Etymology 2===
+{{zh-forms}}
+From {{zh-l|*你|you (singular)}}, with -''k'' (plural marker) and tone change ({{zh-ref|Gan, 1997}}). Compare {{zh-l|*𠊬|they}}, from {{zh-l|*佢|he; she; it}}.
+
+====Pronunciation====
 {{zh-pron
 |c-t=niak4
+|cat=pron
 }}
 
 ====Definitions====
 {{zh-hanzi}}
 
-# {{lb|zh|Taishanese}} [[you]] ([[plural]])
+# {{lb|zh|dialectal Cantonese|including|Siyi|Yangjiang}} [[you]] ([[plural]])
 #: {{zh-x|偌 做乜 唔 來 幫手 啊？|Why aren't '''you all''' helping?|C-T}}
 
-====Synonyms====
+=====Synonyms=====
 {{zh-dial|你們}}
 
-===Pronunciation 3===
+===Etymology 3===
+{{zh-forms}}
+{{rfe|zh|related to etymology 2?}}
+
+====Pronunciation====
 {{zh-pron
 |c-t=niak2
+|cat=pron
 }}
 
 ====Definitions====
 {{zh-hanzi}}
 
-# {{lb|zh|Taishanese}} someone
+# {{lb|zh|Taishanese}} [[someone]]
 
-====Synonyms====
-* {{qualifier|Taishanese}} {{zh-l|人偌}}
+=====Synonyms=====
+* {{q|Taishanese}} {{zh-l|人偌}}
+
+===Etymology 4===
+{{zh-forms|alt=若,外}}
+Contraction of {{zh-l|若夥}} ({{zh-ref|Mei, 2015}}).
+
+====Pronunciation====
+{{zh-pron
+|mn=xm,zz,twv:lōa/qz:lǒa/tw:gōa/twvk:jōa
+|cat=adv
+}}
+
+====Definitions====
+{{zh-hanzi}} {{tlb|zh|Hokkien}}
+
+# [[how much]]; [[how]]
+#: {{zh-x|這 粒 金瓜 有{ū} 偌 重？|'''How''' heavy is the pumpkin?|TW}}
+# [[how]] {{gloss|indicating surprise, delight, etc.}}
+#: {{zh-x|這 首 歌 偌 好聽！|This song is '''so''' nice!|TW}}
+
+====Compounds====
+{{zh-der|偌久|無偌久|偌爾|偌爾仔|偌濟|偌仔爾}}
 
 ----
 
