--- a/en/s/substance.7215.wikitext
+++ b/en/s/substance.7215.wikitext
@@ -243,5 +243,5 @@ Borrowed from {{etyl|la|fro}} {{m|la|substantia}}.
 * {{l|fro|substantiel}}
 
 ====Descendants====
-* French: {{desc|fr|substance}}
-* English: {{desc|en|substance|bor=1}}
+* {{desc|fr|substance}}
+* {{desc|en|substance|bor=1}}
