--- a/en/偌/偌.11100.wikitext
+++ b/en/偌/偌.11100.wikitext
@@ -24,8 +24,6 @@
 |mn=ml:liā
 |mn-t=ria2
 |w=3nya
-|mc=y
-|oc=y
 |cat=adv
 }}
 
@@ -39,6 +37,21 @@
 {{zh-der|偌多|偌時|偌大}}
 
 ===Etymology 2===
+{{zh-forms}}
+
+====Pronunciation====
+{{zh-pron
+|m=rè
+|c=je6
+|cat=pn
+}}
+
+====Definitions====
+{{zh-hanzi}}
+
+# {{surname|lang=zh}}
+
+===Etymology 3===
 {{zh-forms}}
 From {{zh-l|*你|you (singular)}}, with -''k'' (plural marker) and tone change ({{zh-ref|Gan, 1997}}). Compare {{zh-l|*𠊬|they}}, from {{zh-l|*佢|he; she; it}}.
 
@@ -57,9 +70,9 @@ From {{zh-l|*你|you (singular)}}, with -''k'' (plural marker) and tone change (
 =====Synonyms=====
 {{zh-dial|你們}}
 
-===Etymology 3===
+===Etymology 4===
 {{zh-forms}}
-{{rfe|zh|related to etymology 2?}}
+{{rfe|zh|related to etymology 3?}}
 
 ====Pronunciation====
 {{zh-pron
@@ -75,7 +88,7 @@ From {{zh-l|*你|you (singular)}}, with -''k'' (plural marker) and tone change (
 =====Synonyms=====
 * {{q|Taishanese}} {{zh-l|人偌}}
 
-===Etymology 4===
+===Etymology 5===
 {{zh-forms|alt=若,外}}
 Contraction of {{zh-l|若夥}} ({{zh-ref|Mei, 2015}}).
 
