--- a/en/偌/偌.11100.wikitext
+++ b/en/偌/偌.11100.wikitext
@@ -83,10 +83,10 @@ From {{zh-l|*你|you (singular)}}, with -''k'' (plural marker) and tone change (
 ====Definitions====
 {{zh-hanzi}}
 
-# {{lb|zh|Taishanese}} [[someone]]
+# {{lb|zh|Taishanese}} [[someone]] (else)
 
 =====Synonyms=====
-* {{q|Taishanese}} {{zh-l|人偌}}
+{{zh-dial|別人}}
 
 ===Etymology 5===
 {{zh-forms|alt=若,外}}
