--- a/en/是/是.16983.wikitext
+++ b/en/是/是.16983.wikitext
@@ -68,6 +68,7 @@ Cognate with {{och-l|寔|this}}, {{och-l|實|this}} and {{och-l|諟|to examine, 
 # {{n-g|a particle showing agreement. In this meaning, 是 is stressed.}} [[truly]]; [[indeed]].
 #: {{zh-x|天氣 是 冷。|It is '''indeed''' cold.}}
 #: {{zh-x|是，長{zhǎng}官。|'''Yes''', sir.}}
+#: {{zh-x|這 件 裙子 是 很 漂亮，但是 太 貴 了。|Although this dress is truly beautiful, it's too expensive.}}
 # {{lb|zh|only in compounds}} [[true]], [[correct]]
 #* {{zh-x|不是|fault; mistake; wrongdoing}}
 #* {{zh-x|你 說 得{de} 是|What you said is '''right'''}}
