--- a/en/s/stomach.8435.wikitext
+++ b/en/s/stomach.8435.wikitext
@@ -380,4 +380,4 @@ From {{etyl|enm|en}} {{m|enm|stomak}}, from {{etyl|fro|en}} {{m|fro|estomac}}, f
 * {{anagrams|en|Satchmo}}
 
 [[Category:English basic words]]
-[[Category:en:Anatomy]]
+[[Category:en:Organs]]
