--- a/en/b/brick.7395.wikitext
+++ b/en/b/brick.7395.wikitext
@@ -72,6 +72,7 @@ From {{etyl|frm|en}} {{m|fr|briche}}, {{m|fr|brique||brick}}, probably from a {{
 * Arabic: {{t|ar|طُوبَة|f}}, {{t|ar|لَبِنَة|f}}, {{t|ar|قَرْمِيد|m}}
 * Armenian: {{t+|hy|աղյուս}}
 * Aromanian: {{t|rup|chirãmidã|f}}
+* Assamese: {{t|as|ইটা}}
 * Asturian: {{t|ast|lladriyu|m}}
 * Azeri: {{t+|az|kərpic}}
 * Bashkir: {{t|ba|кирбес|sc=Cyrl}}
