--- a/en/傀/傀.11152.wikitext
+++ b/en/傀/傀.11152.wikitext
@@ -20,7 +20,7 @@
 
 ===Pronunciation===
 {{zh-pron
-|m=kuǐ
+|m=kuǐ,guǐ
 |c=faai3,gwai1
 |mn=ml:khúi/ka
 |mn_note=ka - 嘉 is used in the Mainland
@@ -32,7 +32,7 @@
 ===Definitions===
 {{zh-hanzi}}
 
-# {{rfdef|zh}}
+# {{zh-only|傀儡|傀然}}
 
 ====Compounds====
 {{zh-der|傀偉|傀儡|傀儡家庭|傀儡戲|傀儡政權|傀然|懸絲傀儡|文樂傀儡|線抽傀儡|肉傀儡|藥發傀儡|跳傀儡}}
