--- a/en/慍/慍.15712.wikitext
+++ b/en/慍/慍.15712.wikitext
@@ -5,8 +5,6 @@
 ===Han character===
 {{Han char|rn=61|rad=心|as=10|sn=13|four=96017|canj=PWOT|ids=⿰忄𥁕}}
 
-# [[angry]], [[indignant]], [[resentful]]
-
 ====References====
 * {{Han ref|kx=0398.110|dkj=11059|dj=0734.010|hdz=42337.030|uh=614D|ud=24909|bh=B759|bd=46937}}
 
@@ -27,7 +25,8 @@
 ===Definitions===
 {{zh-hanzi}}
 
-# {{rfdef|lang=zh}}
+# [[angry]], [[indignant]], [[resentful]]
+#* {{zh-x|人 不知 而 不 '''慍''' ，不亦 君子 乎 ？|ref=Analects}}
 
 ----
 
