--- a/en/慍/慍.15712.wikitext
+++ b/en/慍/慍.15712.wikitext
@@ -26,7 +26,7 @@
 {{zh-hanzi}}
 
 # [[angry]], [[indignant]], [[resentful]]
-#* {{zh-x|人 不知 而 不 '''慍''' ，不亦 君子 乎 ？|ref=Analects}}
+#* {{zh-x|人 不知 而 不 '''慍''' ，不亦 君子 乎 ？|Is he not a man of complete virtue, who feels no '''discomposure''' though man may take note of him?|ref=Analects}}
 
 ----
 
