--- a/en/c/choose.6832.wikitext
+++ b/en/c/choose.6832.wikitext
@@ -6,7 +6,7 @@
 
 ===Etymology 1===
 {{PIE root|en|ǵews}}
-From {{etyl|enm|en}} {{m|enm|chosen}}, {{m|enm|chesen}}, from {{etyl|ang|en}} {{m|ang|ċēosan||to choose, seek out, select, elect, decide, test, accept, settle for, approve}}, from {{etyl|gem-pro|en}} {{m|gem-pro|*keusaną||to taste, choose}}, from {{etyl|ine-pro|en}} {{m|ine-pro|*ǵews-||to taste, choose, enjoy}}. Cognate with {{cog|sco|chose}}, {{m|sco|chese||to choose}}, {{cog|fr|choisir||to choose}}, {{cog|frr|kese||to choose}}, {{cog|fy|kieze||to choose}}, {{cog|nl|kiezen||to choose}}, {{cog|nds|kesen||to choose}}, archaic and partially obsolete {{cog|de|kiesen||to choose}}, {{cog|da|kyse||to choose}}, {{cog|no|kjose||to choose}}, {{cog|sv|tjusa||to charm, allure}}, {{cog|is|kjósa||to choose, vote, elect}}, {{cog|got|𐌺𐌹𐌿𐍃𐌰𐌽||to test}}, {{cog|la|gusto|gustō|taste, sample|pos=verb}}.
+From {{inh|en|enm|chosen}}, {{m|enm|chesen}}, from {{inh|en|ang|ċēosan||to choose, seek out, select, elect, decide, test, accept, settle for, approve}}, from {{inh|en|gem-pro|*keusaną||to taste, choose}}, from {{etyl|ine-pro|en}} {{m|ine-pro|*ǵews-||to taste, choose, enjoy}}. Cognate with {{cog|sco|chose}}, {{m|sco|chese||to choose}}, {{cog|fr|choisir||to choose}}, {{cog|frr|kese||to choose}}, {{cog|fy|kieze||to choose}}, {{cog|nl|kiezen||to choose}}, {{cog|nds|kesen||to choose}}, archaic and partially obsolete {{cog|de|kiesen||to choose}}, {{cog|da|kyse||to choose}}, {{cog|no|kjose||to choose}}, {{cog|sv|tjusa||to charm, allure}}, {{cog|is|kjósa||to choose, vote, elect}}, {{cog|got|𐌺𐌹𐌿𐍃𐌰𐌽||to test}}, {{cog|la|gusto|gustō|taste, sample|pos=verb}}.
 
 ====Pronunciation====
 * {{enPR|cho͞oz}}, {{IPA|/t͡ʃuːz/|lang=en}}
