--- a/en/傍/傍.11165.wikitext
+++ b/en/傍/傍.11165.wikitext
@@ -31,7 +31,11 @@
 ===Definitions===
 {{zh-hanzi}}
 
-# {{rfdef|lang=zh}}
+# by [[side]] of, [[beside]], [[near]], [[close]]
+#: {{zh-x|傍晚|[[evening]]}}
+
+====Compounds====
+{{zh-der|傍晚}}
 
 ----
 
