--- a/en/c/choose.6832.wikitext
+++ b/en/c/choose.6832.wikitext
@@ -46,7 +46,7 @@ From {{inh|en|enm|chosen}}, {{m|enm|chesen}}, from {{inh|en|ang|ċēosan||to cho
 * Albanian: {{t+|sq|zgjedh}}
 * Arabic: {{t|ar|اِخْتَارَ}}
 * Armenian: {{t+|hy|ընտրել}}
-* Assamese: {{t|as|বাছা}} {{t|as|বাছনি}}, {{t|as|নিৰ্বাচন কৰা}}
+* Assamese: {{t|as|বাছা}} {{t|as|বাছনি}}, {{t|as|নিৰ্বাচন কৰা|tr=nirbasôn kôra}}
 * Asturian: {{t|ast|escoyer}}, {{t|ast|elixir}}
 * Azeri: {{t+|az|seçmək}}
 * Basque: {{t-needed|eu}}
@@ -137,7 +137,7 @@ From {{inh|en|enm|chosen}}, {{m|enm|chesen}}, from {{inh|en|ang|ċēosan||to cho
 * Arabic: {{t|ar|اِخْتَارَ}}
 * Armenian: {{t+|hy|ընտրել}}
 * Aromanian: {{t|rup|aleg}}
-* Assamese: {{t|as|বাছা}} {{t|as|বাছনি}}, {{t|as|নিৰ্বাচন কৰা}}
+* Assamese: {{t|as|বাছা}} {{t|as|বাছনি}}, {{t|as|নিৰ্বাচন কৰা|tr=nirbasôn kôra}}
 * Asturian: {{t|ast|escoyer}}, {{t|ast|elixir}}
 * Basque: {{t|eu|aukeratu}}
 * Bulgarian: {{t+|bg|избирам}}
