--- a/en/b/beautiful.7394.wikitext
+++ b/en/b/beautiful.7394.wikitext
@@ -219,8 +219,11 @@ From {{inh|en|enm|bewteful}}, {{m|enm|beautefull||attractive to the eye, beautif
 {{trans-top|well executed}}
 * Finnish: {{t+|fi|kaunis}}, {{t+|fi|loistava}}
 * Hungarian: {{t+|hu|szép}}
-{{trans-mid}}
 * Macedonian: {{t|mk|убав}}
+{{trans-mid}}
+* Norwegian:
+*: Bokmål: {{t|nb|nydelig}}, {{t|nb|enestående}}
+*: Nynorsk: {{t|nn|nydeleg}}, {{t|nn|eneståande}}
 {{trans-bottom}}
 
 {{trans-top|as a pro-sentence}}
