--- a/en/愧/愧.15674.wikitext
+++ b/en/愧/愧.15674.wikitext
@@ -45,7 +45,8 @@
 ===Kanji===
 {{ja-kanji|grade=|rs=心10}}
 
-# {{defn|lang=ja|sort=心10}}
+# feel ashamed
+# [[shy]]
 
 ====Readings====
 * {{ja-readings|on=[[き]] (ki)|kun=[[はじる]] (hajiru)}}
