--- a/en/b/beautiful.7394.wikitext
+++ b/en/b/beautiful.7394.wikitext
@@ -109,6 +109,7 @@ From {{inh|en|enm|bewteful}}, {{m|enm|beautefull||attractive to the eye, beautif
 * Istriot: {{t|ist|biel|m}}, {{t|ist|biela|f}}
 * Italian: {{t+|it|bello|m}}, {{t+|it|bella|f}}
 * Japanese: {{t+|ja|美しい|tr=うつくしい, utsukushii}}, {{t|ja|綺麗|tr=きれい, kirei}}, {{t+|ja|素敵|tr=すてき, suteki}}
+* Jingpho: {{t|kac|tsawm}}
 * Kalmyk: {{t-needed|xal}}
 * Kazakh: {{t+|kk|әдемі|sc=Cyrl}}, {{t|kk|әсем|sc=Cyrl}}
 * Khanty: {{t|kca|хурамӑӈ}} {{qualifier|Kazym}}
@@ -117,11 +118,11 @@ From {{inh|en|enm|bewteful}}, {{m|enm|beautefull||attractive to the eye, beautif
 * Kurdish:
 *: Sorani: {{t+|ku|جوان}}, {{t|ku|ئێسک سووک}}
 * Kyrgyz: {{t+|ky|сулуу}}, {{t+|ky|көркөм}}, {{t+|ky|кооз}}, {{t+|ky|сонун}}, {{t+|ky|чырайлуу}}, {{t+|ky|чырай жүздүү}}, {{t+|ky|сулуу}}, {{t+|ky|укмуштай}}, {{t+|ky|укмуштай}}, {{t+|ky|ажайып}}, {{t+|ky|көйүткөн}}
+{{trans-mid}}
 * Lao: {{t|lo|ງາມ|sc=Laoo}}
 * Latin: {{t|la|pulcher}}, {{t|la|formosus|m}}, {{t+|la|bellus|m}}
 * Latvian: {{t|lv|skaists}}, {{t|lv|daiļš}}, {{t|lv|glīts}}
 * Limburgish: {{t|li|sjoen}}
-{{trans-mid}}
 * Lithuanian: {{t+|lt|gražus}}
 * Lojban: {{t|jbo|melbi}}
 * Low German: {{t+|nds|schöön}}, {{t|nds|scheun}}
