--- a/en/i/i_e_.7209.wikitext
+++ b/en/i/i_e_.7209.wikitext
@@ -5,7 +5,7 @@
 * {{l|en|i. e.}}
 
 ===Etymology===
-From {{etyl|la|en}} {{m|la|i. e.}}, an abbreviation of {{m|la|id est||it is}}.
+From {{etyl|la|en}} {{m|la|i. e.}}, an abbreviation of {{m|la|id est||that is}}.
 
 ===Pronunciation===
 * {{a|RP|US}} {{IPA|/ˌaɪˈiː/|lang=en}}
