--- a/en/昕/昕.16957.wikitext
+++ b/en/昕/昕.16957.wikitext
@@ -13,12 +13,29 @@
 
 ----
 
-==Cantonese==
+==Chinese==
+{{zh-forms}}
 
-===Hanzi===
-{{yue-hanzi|jyut=[[jan1]]|y=yan1}}
+===Glyph origin===
+{{Han etym}}
 
-# {{defn|lang=yue|sort=日04}}
+===Pronunciation===
+{{zh-pron
+|m=xīn
+|c=jan1
+|h=pfs=
+|md=
+|mn=
+|w=
+|mc=y
+|oc=y
+|cat=
+}}
+
+===Definitions===
+{{zh-hanzi}}
+
+# {{defn|lang=zh|sort=日04}}
 
 ----
 
@@ -40,15 +57,6 @@
 {{ko-hanja|hangeul=흔|eumhun=|rv=heun|mr=hŭn|y=hun}}
 
 # {{defn|lang=ko|sort=日04}}
-
-----
-
-==Mandarin==
-
-===Hanzi===
-{{cmn-hanzi|pin=[[xīn]] ([[xin1]])|wg=hsin<sup>1</sup>}}
-
-# {{defn|lang=cmn|sort=日04}}
 
 ----
 
