Replacing Wikisaurus with Thesaurus. <fight#47872177>

--- a/en/f/fight.6879.wikitext
+++ b/en/f/fight.6879.wikitext
@@ -44,7 +44,7 @@ The noun is from {{etyl|ang|en}} {{m|ang|feoht}}, from the verb; compare Dutch {
 #: {{ux|en|to '''fight''' cocks;&emsp; to '''fight''' one's ship}}
 
 ====Synonyms====
-* See also [[Wikisaurus:fight]]
+* See also [[Thesaurus:fight]]
 
 ====Derived terms====
 {{der3|lang=en|title=Terms derived from ''fight'' (verb)
@@ -301,7 +301,7 @@ The noun is from {{etyl|ang|en}} {{m|ang|feoht}}, from the verb; compare Dutch {
 #*: Up with your '''fights''', and your nettings prepare.
 
 ====Synonyms====
-* See also [[Wikisaurus:fight]]
+* See also [[Thesaurus:fight]]
 
 ====Derived terms====
 {{rel-top3|Terms derived from ''fight'' (noun)}}
