t+vi:[[bao tử]] ([[WT:EDIT|Assisted]]) <stomach#47873128>

--- a/en/s/stomach.8435.wikitext
+++ b/en/s/stomach.8435.wikitext
@@ -227,7 +227,7 @@ From {{etyl|enm|en}} {{m|enm|stomak}}, from {{etyl|fro|en}} {{m|fro|estomac}}, f
 * Uyghur: {{t+|ug|ئاشقازان}}
 * Uzbek: {{t+|uz|qorin}}, {{t+|uz|oshqozon}}
 * Venetian: {{t|vec|stòmego|m}}
-* Vietnamese: {{t+|vi|dạ dày}}
+* Vietnamese: {{t+|vi|dạ dày}}, {{t+|vi|bao tử}}
 * Vilamovian: {{t|wym|maoga}}
 * Volapük: {{t+|vo|stomäg}}
 * Walloon: {{t-needed|wa}}
