--- a/en/坊/坊.13005.wikitext
+++ b/en/坊/坊.13005.wikitext
@@ -56,6 +56,8 @@ fāng: Mainland standard for other senses of pronunciation 1; Taiwan standard fo
 {{zh-hanzi}}
 
 # {{zh-alt-form|防|tr=-}}
+## [[dam]]; [[embankment]]
+## to [[guard]] [[against]]
 
 ===Compounds===
 {{zh-der|工坊|坊間|磨坊|街坊|牌坊|茶坊|磨坊主|烘焙坊|槽坊|碾坊|廊坊|濰坊|街坊鄰里|街坊四鄰|又想當婊子又想立牌坊|坊間傳言}}
