Replacing Wikisaurus with Thesaurus. <vomit#47876035>

--- a/en/v/vomit.8434.wikitext
+++ b/en/v/vomit.8434.wikitext
@@ -30,7 +30,7 @@ From {{inh|en|enm|vomiten}}, from {{der|en|la|vomitāre}}, present active infini
 * {{l|en|barf}}
 * {{l|en|chunder}}
 * {{l|en|throw up}}
-* See also [[Wikisaurus:regurgitate]]
+* See also [[Thesaurus:regurgitate]]
 
 ====Derived terms====
 * {{l|en|vomitable}}
@@ -141,7 +141,7 @@ From {{inh|en|enm|vomiten}}, from {{der|en|la|vomitāre}}, present active infini
 #*: He gives your Hollander a '''vomit'''.
 
 ====Synonyms====
-* See also [[Wikisaurus:vomit]].
+* See also [[Thesaurus:vomit]].
 
 ====Translations====
 {{trans-top|regurgitated former contents of a stomach}}
