--- a/en/p/play.8442.wikitext
+++ b/en/p/play.8442.wikitext
@@ -470,7 +470,7 @@ The noun is from {{etyl|enm|en}} {{m|enm|pleye}}, from {{etyl|ang|en}} {{m|ang|p
 
 ====Synonyms====
 * {{sense|literary composition}} {{l|en|drama}}
-* See also [[Wikisaurus:drama]]
+* See also [[Thesaurus:drama]]
 
 ====Translations====
 {{trans-top|playful activity}}
