--- a/en/c/catch.6830.wikitext
+++ b/en/c/catch.6830.wikitext
@@ -387,6 +387,7 @@ Noah Webster's ''American Dictionary'' (1828) regards /kɛtʃ/ as the "popular o
 {{trans-top|to intercept an object in the air etc. {{jump|t|seize object}}}}
 * Arabic: {{t|ar|أَمْسَكَ}}, {{t|ar|مَسَكَ}}
 * Armenian: {{t+|hy|բռնել}}
+* Assamese: {{t|as|ধৰা}}
 * Basque: {{t|eu|harrapatu}}
 * Belarusian: {{t|be|лаві́ць|impf}}, {{t|be|злаві́ць|pf}}, {{t|be|залаві́ць|pf}}
 * Bulgarian: {{t+|bg|хващам}}, {{t+|bg|улавям}}
