--- a/en/值/值.11082.wikitext
+++ b/en/值/值.11082.wikitext
@@ -1,24 +1,7 @@
 {{also|値}}
 {{character info/new}}
 ==Translingual==
-{| class="floatright" border=1 cellpadding="5" cellspacing="0"
-|- valign="center"
-| bgcolor="#dfefff"|
-'''[[Simplified Chinese|Simplified]]'''
-|<span class="Hans" lang="zh-hans" style="font-size: 175%">[[值]]</span>
-|- valign="center"
-| bgcolor="#dfefff"|
-'''[[Traditional Chinese|Traditional]]'''
-|<span class="Hant" lang="zh-hant" style="font-size: 175%">[[值]]</span>
-|- valign="center"
-| bgcolor="#dfefff"|
-'''[[Japanese]]'''
-|<span class="Jpan" lang="jp" style="font-size: 175%">[[値]]</span>
-|- valign="center"
-| bgcolor="#dfefff"|
-'''[[Korean]]'''
-|<span class="Ko" lang="ko" style="font-size: 175%">[[値]]</span>
-|}
+{{CJKV-forms|值|值|値|値}}
 
 ===Han character===
 {{Han char|rn=9|rad=人|as=08|sn=10|four=24216|canj=OJBM|ids=⿰亻直}}
@@ -62,6 +45,9 @@ Taiwan: ti̍t - literary; ta̍t - vernacular
 # [[worthwhile]]
 #: {{zh-x|這 趟 旅行 太 值 了。|This journey is absolutely '''worthwhile'''.}}
 
+====Compounds====
+{{zh-der|增值|加值稅|值回票價|年產值|價值|不值得|不值一錢|價值標準|價值判斷|不值當|價值觀念|值宿|幣值|保值|公告現值|值勤|不值一笑|值遇|加值網路|不值一看|值年|不值|一錢不值|值錢|平均值|值得|帳面價值|價值邏輯|價值論|價值指標|不值錢|值更|不值一哂|價值觀|剩餘價值|不值一文|值月|報值掛號|價值衝突|值星|升值|一文不值|值日|價值連城|值夜|儲值票|值班|值星官|產值|數值控制|社會價值|承諾值|數值分析|承值|比值|新聞價值|時值|當值|現值|淨值|數值|淨值法|成交總值|正值|期望值|月值年災|豹值|近似值|輪值|適值|酸鹼值|等值價格|股票價值|音值|面值|附加價值|總值|等值|量值|貶值|絕對值|調值}}
+
 ===Pronunciation 2===
 {{zh-pron
 |m=zhì
@@ -77,9 +63,6 @@ Taiwan: ti̍t - literary; ta̍t - vernacular
 {{zh-hanzi}}
 
 # {{†}} to [[hold]] [[upright]]
-
-===Compounds===
-{{zh-der|一文不值|一錢不值|不值|不值一哂|不值一文|不值一看|不值一笑|不值一錢|不值得|不值當|不值錢|保值|值勤|值回票價|值夜|值宿|值年|值得|值日|值星|值星官|值更|值月|值班|值遇|值錢|價值|價值判斷|價值指標|價值標準|價值衝突|價值觀|價值觀念|價值論|價值連城|價值邏輯|儲值票|公告現值|剩餘價值|加值稅|加值網路|升值|報值掛號|增值|帳面價值|幣值|平均值|年產值|成交總值|承值|承諾值|數值|數值分析|數值控制|新聞價值|時值|月值年災|期望值|正值|比值|淨值|淨值法|現值|產值|當值|社會價值|等值|等值價格|絕對值|總值|股票價值|調值|豹值|貶值|輪值|近似值|適值|酸鹼值|量值|附加價值|面值|音值}}
 
 ----
 
