--- a/en/s/speak.7214.wikitext
+++ b/en/s/speak.7214.wikitext
@@ -111,7 +111,7 @@ From {{etyl|enm|en}} {{m|enm|speken||to speak}}, from {{etyl|ang|en}} {{m|ang|sp
 *: Moroccan Arabic: {{t|ary|هْدر}}
 * Armenian: {{t+|hy|խոսել}}
 * Aromanian: {{t|rup|grescu}}, {{t|rup|zburãscu}}
-* Assamese: {{t|as|কোৱা}}
+* Assamese: {{t|as|কথা কোৱা}}, {{t|as|কোৱা}}
 * Asturian: {{t+|ast|falar}}
 * Avar: {{t-needed|av}}
 * Azeri: {{t+|az|danışmaq}}
@@ -237,7 +237,7 @@ From {{etyl|enm|en}} {{m|enm|speken||to speak}}, from {{etyl|ang|en}} {{m|ang|sp
 * Svan: {{t-needed|sva}}
 * Swahili: {{t|sw|ongea}}
 * Swedish: {{t+|sv|tala}}, {{t+|sv|prata}}, {{t+|sv|snacka}}
-* Sylheti: {{t|syl|ꠇꠃꠣ}}
+* Sylheti: {{t|syl|ꠇꠕꠣ ꠇꠃꠣ}}
 * Tagalog: {{t|tl|magsalita}}
 * Tahitian: {{t|ty|parau}}
 * Tajik: {{t|tg|ҳарф задан|sc=Cyrl}}
