--- a/en/坊/坊.13005.wikitext
+++ b/en/坊/坊.13005.wikitext
@@ -27,9 +27,7 @@
 
 ===Pronunciation 1===
 {{zh-pron
-|m=fāng,fáng
-|m_note=fáng: Mainland standard for sense "workshop"
-fāng: Mainland standard for other senses of pronunciation 1; Taiwan standard for all senses of pronunciation 1
+|m=坊
 |c=fong1
 |mc=2
 |oc=n,1
@@ -40,10 +38,11 @@ fāng: Mainland standard for other senses of pronunciation 1; Taiwan standard fo
 
 # [[lane]], [[alley]]
 # [[store]]
-# [[workshop]]; [[mill]]
-#* {{zh-x|牛 巷 坊|Cow alley '''workshop'''.|ref=Modern [[toponym]] in [[Shenzhen]]'s Huaqiangbei district.}}
 # {{w|paifang}}
 # {{surname|lang=zh}}
+
+===Compounds===
+{{zh-der|坊間|街坊|牌坊|茶坊|廊坊|濰坊|街坊鄰里|街坊四鄰|坊間傳言}}
 
 ===Pronunciation 2===
 {{zh-pron
@@ -56,10 +55,12 @@ fāng: Mainland standard for other senses of pronunciation 1; Taiwan standard fo
 ====Definitions====
 {{zh-hanzi}}
 
+# [[workshop]], [[mill]]
+#* {{zh-x|牛 巷 坊|Cow alley '''workshop'''.|ref=Modern [[toponym]] in [[Shenzhen]]'s Huaqiangbei district.}}
 # {{zh-alt-form|防|tr=-}}
 
 ===Compounds===
-{{zh-der|工坊|坊間|磨坊|街坊|牌坊|茶坊|磨坊主|烘焙坊|槽坊|碾坊|廊坊|濰坊|街坊鄰里|街坊四鄰|又想當婊子又想立牌坊|坊間傳言}}
+{{zh-der|磨坊|茶坊|磨坊主|烘焙坊|槽坊|碾坊}}
 
 ----
 
