--- a/en/坊/坊.13005.wikitext
+++ b/en/坊/坊.13005.wikitext
@@ -42,7 +42,7 @@
 # {{surname|lang=zh}}
 
 ===Compounds===
-{{zh-der|坊間|街坊|牌坊|茶坊|廊坊|濰坊|街坊鄰里|街坊四鄰|坊間傳言}}
+{{zh-der|坊間|街坊|牌坊|茶坊|街坊鄰里|街坊四鄰|坊間傳言}}
 
 ===Pronunciation 2===
 {{zh-pron
