--- a/en/坊/坊.13005.wikitext
+++ b/en/坊/坊.13005.wikitext
@@ -22,6 +22,7 @@
 {{zh-pron
 |mn=hong/qz,xm,zz:hóng/hng
 |mn_note=hong/hóng - literary; hng - vernacular
+|cat=
 }}</div>
 {{zh-attn-split}}
 
@@ -31,6 +32,7 @@
 |c=fong1
 |mc=2
 |oc=n,1
+|cat=
 }}
 
 ====Definitions====
@@ -50,6 +52,7 @@
 |c=fong4
 |mc=1
 |oc=y,2
+|cat=
 }}
 
 ====Definitions====
