--- a/en/v/vomit.8434.wikitext
+++ b/en/v/vomit.8434.wikitext
@@ -43,6 +43,7 @@ From {{inh|en|enm|vomiten}}, from {{der|en|la|vomitāre}}, present active infini
 * Arabic: {{t|ar|تَقَيَّأَ}}, {{t|ar|قَاءَ}}, {{t|ar|اِسْتَفْرَغَ}}
 * Armenian: {{t|hy|հետ տալ}}, {{t+|hy|փսխել}}, {{t+|hy|ործկալ}}
 * Aromanian: {{t|rup|vom}}, {{t|rup|vomu}}
+* Assamese: {{t|as|বমি কৰা}}
 * Asturian: {{t|ast|vomitar}}
 * Azeri: {{t+|az|qusmaq}}
 * Belarusian: {{t|be|ванітава́ць|impf}}, {{t|be|блява́ць|impf}}, {{t|be|рваць|impf}} {{qualifier|impersonal}}, {{t|be|рыга́ць|impf}}
