/* Glyph origin */ nothing to do with 曰 other than graphical similarity <旨#47928082>

--- a/en/旨/旨.16912.wikitext
+++ b/en/旨/旨.16912.wikitext
@@ -15,7 +15,7 @@
 
 ===Glyph origin===
 {{Han etyl}}
-{{Han compound|匕|曰|t2=delicious, simplified from {{zh-l|*甘}}|ls=psc|c1=p|c2=s}} – according to the ''[[w:Shuowen Jiezi|Shuowen]]''.
+{{Han compound|匕|甘|t2=delicious|ls=psc|c1=p|c2=s}} – according to the ''[[w:Shuowen Jiezi|Shuowen]]''.
 
 {{liushu|ic}} interpretations: {{zh-l|*匕}}, a man tasting, or a spoon ({{zh-l|*匙}}).
 
