--- a/en/慍/慍.15712.wikitext
+++ b/en/慍/慍.15712.wikitext
@@ -13,20 +13,27 @@
 ==Chinese==
 {{zh-forms|s=愠}}
 
+===Glyph origin===
+{{Han etym}}
+
 ===Pronunciation===
 {{zh-pron
 |m=yùn
 |c=wan3
 |mn=qz,tw,xm,zz:ùn
-|ma=
-|cat=a
+|mc=y
+|oc=y
+|cat=v
 }}
 
 ===Definitions===
 {{zh-hanzi}}
 
-# [[angry]], [[indignant]], [[resentful]]
-#* {{zh-x|人 不知 而 不 '''慍''' ，不亦 君子 乎 ？|Is he not a man of complete virtue, who feels no '''discomposure''' though man may take note of him?|ref=Analects}}
+# to be [[angry]]; to [[resent]]
+#* {{zh-x|人 不知 而 不 慍 ，不亦 君子 乎 ？|Is he not a man of complete virtue, who feels no '''discomposure''' though man may take note of him?|ref=Analects}}
+
+===Compounds===
+{{zh-der|慍懟|慍容|慍色|慍羝|慍恚|慍怒|解慍}}
 
 ----
 
