--- a/en/坊/坊.13005.wikitext
+++ b/en/坊/坊.13005.wikitext
@@ -28,7 +28,7 @@
 
 ===Pronunciation 1===
 {{zh-pron
-|m=坊
+|m=fāng
 |c=fong1
 |mc=2
 |oc=n,1
@@ -44,11 +44,11 @@
 # {{surname|lang=zh}}
 
 ===Compounds===
-{{zh-der|坊間|街坊|牌坊|茶坊|街坊鄰里|街坊四鄰|坊間傳言}}
+{{zh-der|安濟坊|劇坊|建坊|冶坊|坊佐|坊市|寶坊|宮坊|坊本|坊門|坊隅|坊間|工作坊|坊廂|坊子|坊牌|坊曲|哺坊|坊刻本|平康坊|兌坊|伎坊|油坊|書坊|教坊司|本因坊|櫃坊賭局|教坊|池坊流|碾坊|教坊記|當坊土地|焗坊|磨坊|染坊|開坊|節婦坊|粉坊|茶坊|麵坊|街坊鄰居|紙坊|街里街坊|蕃坊|茗坊|門坊|雞坊|糟坊|醬坊|酒坊|街坊鄰舍}}
 
 ===Pronunciation 2===
 {{zh-pron
-|m=fáng
+|m=坊
 |c=fong4
 |mc=1
 |oc=y,2
@@ -63,7 +63,7 @@
 # {{zh-alt-form|防|tr=-}}
 
 ===Compounds===
-{{zh-der|磨坊|茶坊|磨坊主|烘焙坊|槽坊|碾坊|廊坊|濰坊}}
+{{zh-der|坊記}}
 
 ----
 
