--- a/en/傍/傍.11165.wikitext
+++ b/en/傍/傍.11165.wikitext
@@ -14,27 +14,48 @@
 
 ===Glyph origin===
 {{Han etym}}
+{{Han compound|人|alt1=亻|旁|ls=psc|c1=s|c2=p}}.
 
-===Pronunciation===
+===Pronunciation 1===
 {{zh-pron
-|m=傍
-|c=pong4,bong6
+|m=bàng,bāng
+|m_note=bāng - used in the sense “to approach” in words such as {{zh-l|*傍晚}} and {{zh-l|*傍午}} (standard in Taiwan)
+|c=bong6
 |h=pfs=
 |md=
 |mn=pn̄g/qz,xm,zz:pōng
 |w=
-|mc=y
-|oc=y
-|cat=
+|mc=2
+|oc=1,2
+|cat=v
 }}
 
-===Definitions===
+====Definitions====
 {{zh-hanzi}}
 
-# by [[side]] of, [[beside]], [[near]], [[close]]
+# to be [[near]]; to be [[beside]]; to [[approach]]; to be by the [[side]] of
+# to [[rely]] on; to [[depend]] on
+# to [[assist]]
 
 ====Compounds====
-{{zh-der|傍花隨柳|傍薄|傍若無人|倚傍|依傍|傍門外道|傍觀|傍門依戶|傍通|侵傍|傍柳隨花|傍晚|傍午|傍人籬壁|傍偟|將傍|傍黑兒|傍門|傍牌|傍今|依山傍水|傍亮兒|傍尊|傍生|傍妻|傍邊|偎傍|傍人門戶|傍晌|傍排|傍個影兒|傍人|倚門傍戶|樿傍|珠玉在傍|親傍|道傍李|靠傍|輕偎低傍|近傍|道傍苦李}}
+{{zh-der|傍亮兒|傍今|傍午|傍晌|傍晚|傍黑兒|將傍|傍花隨柳|倚傍|依傍|傍門依戶|侵傍|傍柳隨花|傍人籬壁|依山傍水|偎傍|傍人門戶|傍個影兒|倚門傍戶|親傍|靠傍|輕偎低傍|近傍}}
+
+===Pronunciation 2===
+{{zh-pron
+|m=páng
+|c=pong4
+|mc=1
+|oc=2,1
+|cat=n,a
+}}
+
+====Definitions====
+{{zh-hanzi}}
+
+# {{zh-alt-form|旁|[[side]]; [[extensive]]; [[other]]}}
+
+====Compounds====
+{{zh-der|傍薄|傍若無人|傍門外道|傍觀|傍通|傍偟|傍門|傍牌|傍尊|傍生|傍妻|傍邊|傍排|傍人|樿傍|珠玉在傍|道傍李|道傍苦李}}
 
 ----
 
