--- a/en/坊/坊.13005.wikitext
+++ b/en/坊/坊.13005.wikitext
@@ -15,16 +15,6 @@
 ===Glyph origin===
 {{Han etym}}
 
-===Pronunciation===
-<div style="border-style:solid;border-width:1px;border-color=#000000;padding:8px;">
-''Following pronunciations need to be checked and be placed to corresponding sections.''
-{{zh-pron
-|mn=hong/qz,xm,zz:hóng/hng
-|mn_note=hong/hóng - literary; hng - vernacular
-|cat=
-}}</div>
-{{zh-attn-split}}
-
 ===Pronunciation 1===
 {{zh-pron
 |m=fāng,fáng
@@ -32,31 +22,33 @@
 |c=fong1,fong4
 |mc=2
 |oc=n,1
-|cat=
+|cat=n,pn
 }}
+{{attention|nan|Needs to be assigned to Pronunciation: hong/qz,xm,zz:hóng/hng; note: hong/hóng - literary; hng - vernacular}}
 
 ====Definitions====
 {{zh-hanzi}}
 
-# [[lane]], [[alley]]
+# [[lane]]; [[alley]]
 # [[store]]
 # {{w|paifang}}
-# [[workshop]], [[mill]]
+# [[workshop]]; [[mill]]
 #* {{zh-x|牛 巷 坊|Cow alley '''workshop'''.|ref=Modern [[toponym]] in [[Shenzhen]]'s Huaqiangbei district.}}
 # {{surname|lang=zh}}
 
-===Compounds===
+====Compounds====
 {{zh-der|安濟坊|劇坊|建坊|冶坊|坊佐|坊市|寶坊|宮坊|坊本|坊門|坊隅|坊間|工作坊|坊廂|坊子|坊記|坊牌|坊曲|哺坊|坊刻本|平康坊|兌坊|作坊|伎坊|油坊|水作坊|書坊|槽坊|教坊司|本因坊|櫃坊賭局|教坊|池坊流|碾坊|教坊記|牌坊|當坊土地|焗坊|磨坊|染坊|開坊|紺坊|老街坊|節婦坊|粉坊|茶坊|麵坊|街坊鄰居|紙坊|貞節牌坊|街里街坊|蕃坊|茗坊|門坊|雞坊|糟坊|醬坊|街坊|酒坊|街坊鄰舍}}
 
 ===Pronunciation 2===
-{{zh-pron|
+{{zh-pron
 |m=fáng
+|cat=v
 }}
 
 ====Definitions====
 {{zh-hanzi}}
 
-# {{†}} {{zh-alt-form|*防|-proof, prevent}}
+# {{†}} {{zh-alt-form|*防|to [[prevent]]}}
 
 ----
 
