--- a/en/易/易.16955.wikitext
+++ b/en/易/易.16955.wikitext
@@ -33,8 +33,8 @@ From {{och-l|移|to change; to alter}} + k-extension ({{zh-ref|Schuessler, 2007}
 |c=jik6
 |h=pfs=yit
 |md=ĭk
-|mn=xm,zz,tw:e̍k/qz:ia̍k/ia̍h
-|mn_note=e̍k/ia̍k - literary; ia̍h - vernacular
+|mn=ia̍h/xm,zz,tw:e̍k/qz:ia̍k
+|mn_note=ia̍h - vernacular; e̍k/ia̍k - literary
 |mn-t=êg8/iah8
 |mn-t_note=êg8 - literary; iah8 - vernacular (only when referring to {{zh-l|*易經}})
 |w=5hhiq
