--- a/en/星/星.16967.wikitext
+++ b/en/星/星.16967.wikitext
@@ -117,7 +117,7 @@ Possible cognates include {{cog|ko|별||star}} and {{cog|mnc|ᡠᠰᡳᡥᠠ||st
 
 # a {{l|en|star}}
 #: {{ja-usex|数え切れないくらいたくさんの'''星'''が輝いている|かぞえきれない くらい たくさん の '''ほし''' が かがやいて いる|an endless number of '''stars''' are shining}}
-#* {{quote-book|date=May 2 2014|||publisher={{w|Wizards of the Coast}}|{{lang|ja|ニクスへの旅}}|chapter={{ruby|{{lang|ja|レオニンの[偶](ぐう)[像](ぞう)[破](は)[壊](かい)[者](しゃ)}}}}|trans-chapter=Leonin Iconoclast|||{{ja-usex|「'''星%々'''は夜%空にあるべきです。ここは我%々の世%界。そして我%々の事は我%々が決めます。」|「'''^ほし%ぼし''' は よ%ぞら に ある べき です。^ここ は われ%われ の せ%かい。^そして われ%われ の こと は われ%われ が きめます。」|“The '''stars''' belong in the night sky. This is our world. And we take matters into our own hands.”}}|trans-title=Journey into Nyx|language=Japanese}}
+#* {{quote-book|date=May 2 2014|||publisher={{w|Wizards of the Coast}}|{{lang|ja|ニクスへの旅}}|chapter={{ruby|{{lang|ja|レオニンの[偶](ぐう)[像](ぞう)[破](は)[壊](かい)[者](しゃ)}}}}|trans-chapter=Leonin Iconoclast|||{{ja-usex|「'''星%々'''は夜%空にあるべきです。ここは我%々の世%界。そして我%々の事は我%々が決めます。」|「'''^ほし%ぼし''' は よ%ぞら に ある べき です。^ここ は われ%われ の せ%かい。^そして われ%われ の こと は われ%われ が きめます。」|“The stars belong in the night sky. This is our world. And we take matters into our own hands.”}}|trans-title=Journey into Nyx|language=Japanese}}
 # {{lb|ja|sort=ほし|tarot}} the {{l|en|star|Star}}
 # {{lb|ja|loosely}} a {{l|en|planet}}
 #* {{quote-book||
