--- a/en/星/星.16967.wikitext
+++ b/en/星/星.16967.wikitext
@@ -213,8 +213,8 @@ The {{m|en|Singapore}} sense derives from the pre-{{l|en|World War Two}} kanji s
 ====Suffix====
 {{ja-pos|suffix|せい}}
 
-# {{lb|ja|loosely|especially|fiction}} {{l|en|planet}} {{n-g|suffix attached to the name of a planet}}
-#: {{ja-usex|ニューイヤー'''星'''調%査%行|^ニュー ^イヤー'''-せい''' ^ちょう%さ%こう|Expedition to '''Planet''' New Year}}
+# {{lb|ja|loosely|especially|fiction}} {{l|en|planet}} {{gl|suffix attached to the name of a planet}}
+#: {{ja-usex|ニューイヤー'''星'''調%査%行|^ニュー ^イヤー'''-せい''' ^ちょう%さ%こう|Expedition to Planet New Year}}
 
 =====Derived terms=====
 * {{ja-r|輝%星|き%せい|{{l|en|bright}} {{l|en|star}}}}
