--- a/en/z/zenith.7223.wikitext
+++ b/en/z/zenith.7223.wikitext
@@ -82,7 +82,7 @@ From {{inh|en|enm|cenyth}}, from {{der|en|ML.|cenit}}, a transliteration of {{de
 * Maori: {{t|mi|kōmata o te rangi}}
 * Middle English: {{t|enm|cenyth}}
 * Navajo: {{t|nv|yá ʼałníiʼgi}}
-* Persian: {{t+|fa|سمت‌الرأس|tr=samt-or-ra's|sc=fa-Arab}}
+* Persian: {{t+|fa|سمت‌الرأس|tr=samt-or-ra's|sc=fa-Arab}}, {{t|fa|سرسو|tr=sarsu}}
 * Polish: {{t+|pl|zenit|m}}, {{t+|pl|apogeum|n}}
 * Portuguese: {{t+|pt|zénite|m}} {{qualifier|Portugal}}, {{t+|pt|zênite|m}} {{qualifier|Brazil}}
 * Romanian: {{t+|ro|dric|m}}
