t+vi:[[cực điểm]] t+vi:[[điểm cao nhất]] t+vi:[[tột đỉnh]] t+vi:[[thiên đỉnh]] ([[WT:EDIT|Assisted]]) <zenith#47964741>

--- a/en/z/zenith.7223.wikitext
+++ b/en/z/zenith.7223.wikitext
@@ -93,6 +93,7 @@ From {{inh|en|enm|cenyth}}, from {{der|en|ML.|cenit}}, a transliteration of {{de
 * Spanish: {{t+|es|cenit|m}}
 * Tagalog: {{t|tl|ituktok}}
 * Turkish: {{t+|tr|zenit}}, {{t+|tr|başucu}}, {{t+|tr|başucu noktası}}, {{t|tr|setürreis}}, {{t+|tr|tepe}}
+* Vietnamese: {{t+|vi|thiên đỉnh}}
 {{trans-bottom}}
 
 {{trans-top|astronomy: highest point reached by a celestial body}}
@@ -116,6 +117,7 @@ From {{inh|en|enm|cenyth}}, from {{der|en|ML.|cenit}}, a transliteration of {{de
 * Russian: {{t+|ru|зени́т|m}}
 * Tagalog: {{t|tl|ituktok}}
 * Turkish: {{t+|tr|zenit}}, {{t+|tr|zirve}}, {{t+|tr|doruk}}, {{t+|tr|tepe}}, {{t+|tr|ayyuk}}
+* Vietnamese: {{t+|vi|thiên đỉnh}}
 {{trans-bottom}}
 
 {{trans-top|highest point or state; peak}}
@@ -141,6 +143,7 @@ From {{inh|en|enm|cenyth}}, from {{der|en|ML.|cenit}}, a transliteration of {{de
 * Spanish: {{t+|es|apogeo|m}}, {{t+|es|cenit|m}}
 * Telugu: {{t+|te|స్వర్గము}}
 * Turkish: {{t+|tr|zirve}}, {{t+|tr|doruk}}, {{t+|tr|tepe}}, {{t+|tr|ayyuk}}
+* Vietnamese: {{t+|vi|cực điểm}}, {{t|vi|điểm cao nhất}}, {{t+|vi|tột đỉnh}}
 {{trans-bottom}}
 
 {{checktrans-top}}
