--- a/en/c/cost.6840.wikitext
+++ b/en/c/cost.6840.wikitext
@@ -94,6 +94,7 @@ From {{etyl|enm|en}} {{m|enm|cost}}, {{m|enm|coust}}, from {{m|enm|costen||to co
 * Galician: {{t+|gl|custo|m}}
 * Georgian: {{t|ka|ფასი|sc=Geor}}
 * German: {{t+|de|Kosten|p}}
+* Gothic: {{t|got|𐌰𐌽𐌳𐌰𐍅𐌰𐌹𐍂𐌸𐌹|n}}
 * Greek: {{t+|el|κόστος|n}}, {{t+|el|δαπάνη|f}}, {{t+|el|τίμημα|n}}, {{t+|el|αντίτιμο|n}}
 * Hebrew: {{t|he|עלות|tr='alut|f}}
 * Hungarian: {{t+|hu|ár}}
