--- a/en/s/spelt.7213.wikitext
+++ b/en/s/spelt.7213.wikitext
@@ -32,7 +32,7 @@ From {{inh|en|enm|spelt}}, from {{inh|en|ang|spelt||spelt, corn}}, from {{der|en
 * {{sense|grain}} [[hulled wheat]]
 
 =====Coordinate terms=====
-* {{sense|grain}} [[emmer]] ([[farro]]), [[einkorn]]
+* {{sense|grain}} [[emmer]] ([[farro]]), [[einkorn wheat]]
 
 =====Translations=====
 {{trans-top|a type of wheat, Triticum aestivum spelta}}
