--- a/en/l/lies.16986.wikitext
+++ b/en/l/lies.16986.wikitext
@@ -143,7 +143,7 @@ Borrowing from Latvian ''[[liesa]]''.
 ===Noun===
 {{head|liv|noun}}
 
-# [[spleen]]
+# {{label|liv|Salaca}} [[spleen]]
 
 ----
 
