--- a/en/f/feel.6876.wikitext
+++ b/en/f/feel.6876.wikitext
@@ -145,6 +145,7 @@ From {{etyl|enm|en}} {{m|enm|felen}}, from {{etyl|ang|en}} {{m|ang|fēlan||to fe
 *: Upper Sorbian: {{t|hsb|čuć}}
 * Spanish: {{t+|es|sentir}}, {{t+|es|tocar}}
 * Swedish: {{t+|sv|känna}}
+* Thai: {{t+|th|สัมผัส}}
 * Turkish: {{t+|tr|hissetmek}}
 * ǃXóõ: {{t|nmn|ta̰ã}}
 {{trans-bottom}}
@@ -252,6 +253,7 @@ From {{etyl|enm|en}} {{m|enm|felen}}, from {{etyl|ang|en}} {{m|ang|fēlan||to fe
 * Russian: {{t+|ru|чу́вствовать|impf}}, {{t+|ru|полага́ть|impf}}, {{t+|ru|ду́мать|impf}}
 * Spanish: {{t+|es|sentir}}, {{t+|es|creer}}
 * Swedish: {{t+|sv|känna}}, {{t+|sv|tycka}}, {{t+|sv|anse}}
+* Thai: {{t+|th|เชื่อ}}, {{t+|th|คิด}}
 {{trans-bottom}}
 
 {{trans-top|intransitive: to search by touching}}
@@ -264,6 +266,7 @@ From {{etyl|enm|en}} {{m|enm|felen}}, from {{etyl|ang|en}} {{m|ang|fēlan||to fe
 * Norwegian: {{t+|no|kjenne|alt=kjenne etter}}, {{t+|no|føle}}
 * Portuguese: {{t|pt|palpar}}
 * Russian: {{t+|ru|щу́пать|impf}}, {{t+|ru|ощу́пывать|impf}}, {{t+|ru|нащу́пывать|impf}}
+* Thai: {{t+|th|คลำ}}
 * Vietnamese: {{t+|vi|mò}}
 {{trans-bottom}}
 
@@ -287,6 +290,7 @@ From {{etyl|enm|en}} {{m|enm|felen}}, from {{etyl|ang|en}} {{m|ang|fēlan||to fe
 *: Lower Sorbian: {{t|dsb|cuś|alt=cuś se}}
 * Spanish: {{t+|es|sentirse}}
 * Swedish: {{t+|sv|må}}
+* Thai: {{t+|th|รู้สึก}}
 {{trans-bottom}}
 
 {{trans-top|copulative: to seem}}
@@ -307,6 +311,7 @@ From {{etyl|enm|en}} {{m|enm|felen}}, from {{etyl|ang|en}} {{m|ang|fēlan||to fe
 {{trans-mid}}
 * Russian: {{t+|ru|сочу́вствовать|impf}}
 * Spanish: {{t|es|sentirlo}}, {{t+|es|compadecer}}
+* Thai: {{t+|th|เห็นใจ}}
 {{trans-bottom}}
 
 {{checktrans-top}}
