--- a/en/坊/坊.13005.wikitext
+++ b/en/坊/坊.13005.wikitext
@@ -18,7 +18,7 @@
 ===Pronunciation 1===
 {{zh-pron
 |m=fāng,fáng
-|m_note=fāng - vernacular (“lane, alley, store, paifang and as a surname”); fāng (Taiwan), fáng (Mainland) - vernacular (“workshop, mill”)
+|m_note=fāng - vernacular (“lane, alley, store, paifang and as a surname”); fāng (Taiwan), fáng (Mainland) - literary (“workshop, mill”)
 |c=fong1,fong4
 |mc=2
 |oc=n,1
