--- a/en/坴/坴.13047.wikitext
+++ b/en/坴/坴.13047.wikitext
@@ -17,7 +17,7 @@
 
 ===Glyph origin===
 {{Han etym}}
-{{Han compound|圥|土|c1=p|c2=s|t2=dust|ls=psc}}.
+{{Han compound|圥|土|c1=p|c2=s|t2=earth; soil|ls=psc}}.
 
 ===Pronunciation===
 {{zh-pron
@@ -32,8 +32,7 @@
 ===Definitions===
 {{zh-hanzi}}
 
-# a [[clod]] of [[earth]]
-# [[land]]
+# of a [[clod]] of [[earth]], [[big]]
 
 ----
 
