--- a/en/f/float.8440.wikitext
+++ b/en/f/float.8440.wikitext
@@ -97,6 +97,7 @@ From {{etyl|enm|en}} {{m|enm|floten}}, from {{etyl|ang|en}} {{m|ang|flotian||to 
 *: Upper Sorbian: {{t|hsb|płuwać|impf}}
 * Spanish: {{t+|es|flotar}}
 * Sundanese: {{t|su|ambang}}
+* Swahili: {{t|sw|elea|alt=-elea}}
 * Swedish: {{t+|sv|flyta}}
 * Telugu: {{t+|te|తేలు}}
 * Turkish: {{t-needed|tr}}
