--- a/en/s/spelt.7213.wikitext
+++ b/en/s/spelt.7213.wikitext
@@ -8,7 +8,7 @@
 See {{m|en|spell}}.
 
 ====Alternative forms====
-* {{l|en|spelled}} {{qualifier|US|}}
+* {{l|en|spelled}}
 
 ====Verb====
 {{head|en|verb form}}
