--- a/en/p/pajamas.4756.wikitext
+++ b/en/p/pajamas.4756.wikitext
@@ -20,7 +20,7 @@ From {{etyl|ur|en}}/{{etyl|hi|en}} {{m|ur|پایجامه|tr=pāyjāma}} / {{m|hi
 # Loose-fitting [[trousers]] worn by both sexes in various southern Asian countries including [[India]].
 
 ====Usage notes====
-''Pajamas'' is chiefly a U.S. spelling, the rest of the English speaking world uses ''pyjamas''.
+''Pajamas'' is chiefly a U.S. spelling; the rest of the English-speaking world uses ''pyjamas''.
 
 ====Derived terms====
 * {{l|en|cat's pajamas}}
