--- a/en/昆/昆.16942.wikitext
+++ b/en/昆/昆.16942.wikitext
@@ -59,8 +59,32 @@
 # {{zh-only|昆侖|alternative form of [[渾淪]]|tr=húnlún}}
 
 ===Etymology 3===
-{{zh-see|混|v}}
-# 54th [[tetragram]] of the {{w|Taixuanjing}}
+
+====Pronunciation====
+{{zh-pron
+|m=hùn,hún,hǔn,2nb=variant,3nb=variant in Taiwan
+|m-s=
+|c=wan6
+|c-t=
+|g=
+|h=pfs=
+|j=
+|md=
+|mn=hūn/xm:hùn
+|mn-t=
+|w=
+|x=
+|mc=y
+|oc=y
+|ma=y
+|cat=v,a
+}}
+
+====Definitions====
+{{zh-hanzi}}
+
+# {{zh-alt-form|混}}
+# 54th [[tetragram]] of the {{w|Taixuanjing}}; "unity"
 
 ===Etymology 4===
 {{zh-see|崑}}
