--- a/en/c/catch.6830.wikitext
+++ b/en/c/catch.6830.wikitext
@@ -395,7 +395,7 @@ Noah Webster's ''American Dictionary'' (1828) regards /kɛtʃ/ as the "popular o
 * Burmese: {{t+|my|ဖမ်း|sc=Mymr}}
 * Cebuano: {{t|ceb|dakup}}
 * Chinese:
-*: Cantonese: {{t-check|yue|捉|tr=zuk1|sc=Hani}}
+*: Cantonese: {{t|yue|接|tr=zip3|sc=Hani}}
 *: Mandarin: {{t+|cmn|捕|tr=bǔ|sc=Hani}}, {{t+|cmn|抓住|tr=zhuāzhù|sc=Hani}}, {{t+|cmn|抓|tr=zhuā|sc=Hani}}
 * Czech: {{t+|cs|chytit}}, {{t|cs|chytnout}}
 * Danish: {{t+|da|fange}}
