--- a/en/c/come.6838.wikitext
+++ b/en/c/come.6838.wikitext
@@ -308,8 +308,10 @@ The meaning of ''to ejaculate'' is considered rude slang. Many style guides and 
 * French: {{t+|fr|arriver}}
 * Galician: {{t+|gl|vir}}
 * German: {{t+|de|kommen}}, {{t+|de|ankommen}}
-* Hungarian: {{t+|hu|megjön}}, {{t+|hu|jön}}
+* Greek:
+*: Ancient: {{t|grc|ἱκάνω}}
 {{trans-mid}}
+* Hungarian: {{t+|hu|megjön}}, {{t+|hu|jön}}
 * Irish: {{t|ga|tar}}
 * Japanese: {{t+|ja|着く|tr=tsuku|sc=Jpan}}
 * Macedonian: {{t|mk|доаѓа}}, {{t|mk|пристига}}
