--- a/en/傒/傒.11172.wikitext
+++ b/en/傒/傒.11172.wikitext
@@ -4,9 +4,6 @@
 ===Han character===
 {{Han char|rn=9|rad=人|as=10|sn=12|four=22234|canj=OBVK|ids=⿰亻奚}}
 
-# [[personal name]]
-# [[servant]]
-
 ====References====
 * {{Han ref|kx=0113.130|dkj=00959|dj=0241.040|hdz=10203.210|uh=5092|ud=20626|bh=D85D|bd=55389}}
 
@@ -28,7 +25,11 @@
 ===Definitions===
 {{zh-hanzi}}
 
-# {{rfdef|lang=zh}}
+# an ancient ethnic group in China
+# people from Jiangxi
+# {{zh-alt-form|徯}}
+# {{zh-alt-form|蹊}}
+# {{surname|lang=zh}}
 # 18th [[tetragram]] of the {{w|Taixuanjing}}
 
 ----
