--- a/en/坊/坊.13005.wikitext
+++ b/en/坊/坊.13005.wikitext
@@ -17,9 +17,8 @@
 
 ===Pronunciation 1===
 {{zh-pron
-|m=fāng,fáng
-|m_note=fāng - vernacular (“lane, alley, store, paifang and as a surname”); fāng (Taiwan), fáng (Mainland) - literary (“workshop, mill”)
-|c=fong1,fong4
+|m=fāng
+|c=fong1
 |mc=2
 |oc=n,1
 |cat=n,pn
@@ -33,22 +32,35 @@
 #* {{zh-x|^牛-巷-坊|Niuxiangfang {{gloss|alley in Futian District, [[Shenzhen]]}}}}
 # [[store]]
 # {{w|paifang}}
-# [[workshop]]; [[mill]]
 # {{surname|lang=zh}}
-
-====Compounds====
-{{zh-der|安濟坊|劇坊|建坊|冶坊|坊佐|坊市|寶坊|宮坊|坊本|坊門|坊隅|坊間|工作坊|坊廂|坊子|坊記|坊牌|坊曲|哺坊|坊刻本|平康坊|兌坊|作坊|伎坊|油坊|水作坊|書坊|槽坊|教坊司|本因坊|櫃坊賭局|教坊|池坊流|碾坊|教坊記|牌坊|當坊土地|焗坊|磨坊|染坊|開坊|紺坊|老街坊|節婦坊|粉坊|茶坊|麵坊|街坊鄰居|紙坊|貞節牌坊|街里街坊|蕃坊|茗坊|門坊|雞坊|糟坊|醬坊|街坊|酒坊|街坊鄰舍}}
 
 ===Pronunciation 2===
 {{zh-pron
-|m=fáng
-|cat=v
+|m=fāng,fáng,1nb=Taiwan,2nb=Mainland
 }}
 
 ====Definitions====
 {{zh-hanzi}}
 
-# {{†}} {{zh-alt-form|*防|to [[prevent]]}}
+# [[workshop]]; [[mill]]
+
+===Pronunciation 3===
+{{zh-pron
+|m=fáng
+|c=fong4
+|mc=1
+|oc=y,2
+}}
+
+====Definitions====
+{{zh-hanzi}}
+
+# {{†}} {{zh-alt-form|防|tr=-}}
+## [[dam]]; [[embankment]]
+## to [[guard]] [[against]]
+
+===Compounds===
+{{zh-der|安濟坊|劇坊|建坊|冶坊|坊佐|坊市|寶坊|宮坊|坊本|坊門|坊隅|坊間|工作坊|坊廂|坊子|坊記|坊牌|坊曲|哺坊|坊刻本|平康坊|兌坊|作坊|伎坊|油坊|水作坊|書坊|槽坊|教坊司|本因坊|櫃坊賭局|教坊|池坊流|碾坊|教坊記|牌坊|當坊土地|焗坊|磨坊|染坊|開坊|紺坊|老街坊|節婦坊|粉坊|茶坊|麵坊|街坊鄰居|紙坊|貞節牌坊|街里街坊|蕃坊|茗坊|門坊|雞坊|糟坊|醬坊|街坊|酒坊|街坊鄰舍}}
 
 ----
 
