--- a/en/慄/慄.15703.wikitext
+++ b/en/慄/慄.15703.wikitext
@@ -20,8 +20,8 @@
 {{zh-pron
 |m=lì
 |c=leot6
-|c-t=nuut5,luut5
-|c-t_note=nuut5 - vernacular; luut5 - literary
+|c-t=nut5,luut5
+|c-t_note=nut5 - vernacular; luut5 - literary
 |mn=lek
 |mc=y
 |oc=y
@@ -32,7 +32,7 @@
 ===Definitions===
 {{zh-hanzi}}
 
-# [[shiver]], [[shudder]], [[tremble]]
+# to [[shiver]]; to [[shudder]]; to [[tremble]]
 # {{lb|zh|Taishanese}} to be [[scared]]
 #: {{zh-x|慄 到 唔敢 喐|to be so scared one won't dare move|C-T}}
 
