--- a/en/c/creep.6841.wikitext
+++ b/en/c/creep.6841.wikitext
@@ -44,6 +44,7 @@ From {{etyl|enm|en}} {{m|enm|crepen}}, from {{etyl|ang|en}} {{m|ang|crēopan||to
 
 =====Derived terms=====
 {{der-top}}
+* {{l|en|becreep}}
 * {{l|en|creep someone out}}
 * {{l|en|creep up on}}
 * {{l|en|creeper}}
