t+ug:[[پەردە]] ([[WT:EDIT|Assisted]]) <curtain#48110479>

--- a/en/c/curtain.7391.wikitext
+++ b/en/c/curtain.7391.wikitext
@@ -136,6 +136,7 @@ From {{inh|en|enm|curteyn}}, {{m|enm|corteyn}}, {{m|enm|cortyn}}, {{m|enm|cortin
 * Turkmen: {{t|tk|perde}}, {{t|tk|tuty}}
 * Ukrainian: {{t|uk|заві́са|f|sc=Cyrl}}, {{t|uk|занаві́ска|f|sc=Cyrl}}, {{t|uk|курти́на|f|sc=Cyrl}}, {{t|uk|портьє́ра|f|sc=Cyrl}}
 * Urdu: {{t|ur|پردہ|tr=parda|m}}
+* Uyghur: {{t|ug|پەردە}}
 * Uzbek: {{t+|uz|parda}}
 * Venetian: {{t|vec|coltrìna|f}}
 * Vietnamese: {{t+|vi|màn cửa}}, {{t+|vi|màn}}
