--- a/en/c/curtain.7391.wikitext
+++ b/en/c/curtain.7391.wikitext
@@ -93,9 +93,9 @@ From {{inh|en|enm|curteyn}}, {{m|enm|corteyn}}, {{m|enm|cortyn}}, {{m|enm|cortin
 * Kyrgyz: {{t|ky|парда|sc=Cyrl}}
 * Lao: {{t|lo|ຜ້າມ່ານ|sc=Laoo}}, {{t|lo|ເກີ້ງ|sc=Laoo}}, {{t|lo|ມ່ານ|sc=Laoo}}, {{t|lo|ວິສູດ|sc=Laoo}}, {{t|lo|ສາກ|sc=Laoo}}, {{t+|lo|ຜ້າກັ້ງ|sc=Laoo}}
 * Latvian: {{t|lv|aizkars|m}}
-{{trans-mid}}
 * Lithuanian: {{t|lt|užuolaida|f}}
 * Luxembourgish: {{t|lb|Rido|f}}
+{{trans-mid}}
 * Macedonian: {{t|mk|завеса|f}}, {{t|mk|перде|n}}
 * Malay: {{t|ms|tirai}}, {{t|ms|tabir}}
 * Maltese: {{t|mt|purtiera|f}}
@@ -130,8 +130,10 @@ From {{inh|en|enm|curteyn}}, {{m|enm|corteyn}}, {{m|enm|cortyn}}, {{m|enm|cortin
 * Swedish: {{t+|sv|gardin|c}}
 * Tajik: {{t+|tg|парда|sc=Cyrl}}
 * Tamil: {{t+|ta|திரைச்சீலை}}
+* Tatar: {{t+|tt|пәрдә}}
 * Telugu: {{t+|te|తెర}}
 * Thai: {{t|th|ผ้าม่าน}}
+* Tibetan: {{t|bo|ཁྲ་ཡོལ}}, {{t|bo|ཡོལ་བ}}
 * Turkish: {{t+|tr|perde}}
 * Turkmen: {{t|tk|perde}}, {{t|tk|tuty}}
 * Ukrainian: {{t|uk|заві́са|f|sc=Cyrl}}, {{t|uk|занаві́ска|f|sc=Cyrl}}, {{t|uk|курти́на|f|sc=Cyrl}}, {{t|uk|портьє́ра|f|sc=Cyrl}}
