{{ja-readings}} fmt <停#48115157>

--- a/en/停/停.11116.wikitext
+++ b/en/停/停.11116.wikitext
@@ -51,11 +51,12 @@
 # {{defn|lang=ja|sort=人09}}
 
 ====Readings====
-* {{ja-readings
+{{ja-readings
 |goon=じょう
 |kanon=てい
 |kanyoon=ちょう
-|kun=と-める, と-まる, とど-まる}}
+|kun=と-める, と-まる, とど-まる
+}}
 
 ====Compounds====
 {{top4}}
