t+cop:[[ⲧⲱⲃⲉ]] t+jbo:[[ kitybli]] t+chr:[[ᏗᏛᏓᏅᎯ]] ([[WT:EDIT|Assisted]]) <brick#48118631>

--- a/en/b/brick.7395.wikitext
+++ b/en/b/brick.7395.wikitext
@@ -83,10 +83,12 @@ From {{etyl|frm|en}} {{m|fr|briche}}, {{m|fr|brique||brick}}, probably from a {{
 * Bulgarian: {{t+|bg|ту́хла|f|sc=Cyrl}}
 * Burmese: {{t+|my|အုတ်|sc=Mymr}}
 * Catalan: {{t+|ca|maó|m}}
+* Cherokee: {{t|chr|ᏗᏛᏓᏅᎯ }}
 * Chichewa: {{t|ny|njerwa|c9|c10}}
 * Chinese:
 *: Mandarin: {{t+|cmn|磚塊|sc=Hani}}, {{t+|cmn|砖块|tr=zhuānkuài|sc=Hani}}, {{t+|cmn|磚頭|sc=Hani}}, {{t+|cmn|砖头|tr=zhuāntóu|sc=Hani}}
 * Chuvash: {{t|cv|кирпӗч}}
+* Coptic: {{t|cop|ⲧⲱⲃⲉ}}
 * Crimean Tatar: {{t|crh|tola}}, {{t|crh|kirpiç}}
 * Czech: {{t+|cs|cihla|f}}
 * Danish: {{t+|da|mursten|c}}
@@ -126,6 +128,7 @@ From {{etyl|frm|en}} {{m|fr|briche}}, {{m|fr|brique||brick}}, probably from a {{
 * Latvian: {{t|lv|ķieģelis|m}}
 * Limburgish: {{t|li|briek}}
 * Lithuanian: {{t|lt|plyta|f}}
+* Lojban: {{t|jbo| kitybli}}
 * Low German: {{t+|nds|Backsteen|m}}
 * Luxembourgish: {{t|lb|Zill|f}}
 * Macedonian: {{t|mk|ци́гла|f|sc=Cyrl}}, {{t|mk|ту́ла|f|sc=Cyrl}}
