--- a/en/b/brick.7395.wikitext
+++ b/en/b/brick.7395.wikitext
@@ -126,7 +126,7 @@ From {{etyl|frm|en}} {{m|fr|briche}}, {{m|fr|brique||brick}}, probably from a {{
 {{trans-mid}}
 * Latin: {{t|la|later|m}}
 * Latvian: {{t|lv|ķieģelis|m}}
-* Limburgish: {{t|li|briek}}
+* Limburgish: {{t+|li|brik|m}}, {{t+|li|brèk|m}}
 * Lithuanian: {{t|lt|plyta|f}}
 * Lojban: {{t|jbo| kitybli}}
 * Low German: {{t+|nds|Backsteen|m}}
