t+mg:[[biriky]] t+vec:[[quareło]] t+ne:[[इँट्टा]] ([[WT:EDIT|Assisted]]) <brick#48118639>

--- a/en/b/brick.7395.wikitext
+++ b/en/b/brick.7395.wikitext
@@ -132,10 +132,12 @@ From {{etyl|frm|en}} {{m|fr|briche}}, {{m|fr|brique||brick}}, probably from a {{
 * Low German: {{t+|nds|Backsteen|m}}
 * Luxembourgish: {{t|lb|Zill|f}}
 * Macedonian: {{t|mk|ци́гла|f|sc=Cyrl}}, {{t|mk|ту́ла|f|sc=Cyrl}}
+* Malagasy: {{t+|mg|biriky}}
 * Malay: {{t|ms|batu bata}}
 * Mari: {{t|chm|кермыч}}
 * Megleno-Romanian: {{t|ruq|chirămidă|f}}
 * Mongolian: {{t+|mn|тоосго|sc=Cyrl}}
+* Nepali: {{t|ne|इँट्टा}}
 * Norman: {{t|nrf|brique|f}}
 * Norwegian:
 *: Bokmål: {{t|nb|murstein|m}}
@@ -176,6 +178,7 @@ From {{etyl|frm|en}} {{m|fr|briche}}, {{m|fr|brique||brick}}, probably from a {{
 * Ukrainian: {{t+|uk|це́гла|f|sc=Cyrl}}
 * Urdu: {{t|ur|اینٹ|f|tr=īṇṭ|sc=ur-Arab}}
 * Uzbek: {{t+|uz|gʻisht}}
+* Venetian: {{t|vec|quareło|m}}
 * Vietnamese: {{t+|vi|gạch}}, {{t|vi|gạch nung}}, {{t|vi|gạch đỏ}}
 * Volapük: {{t+|vo|bakaston}}
 * Walloon: {{t|wa|brike}}
