--- a/en/s/stab.8437.wikitext
+++ b/en/s/stab.8437.wikitext
@@ -168,6 +168,7 @@ Supposed by some to derive from {{etyl|gd|en}} {{m|gd|stob||to prick, to prod, t
 * Spanish: {{t+|es|apuñalar}}, {{t+|es|acuchillar}}
 * Swedish: {{t+|sv|sticka}}
 * Tagalog: {{t|tl|saksak}}
+* Thai: {{t+|th|แทง}}
 * Turkish: {{t+|tr|bıçaklamak}}, {{t+|tr|şişlemek}}
 * Welsh: {{t+|cy|gwanu}}, {{t+|cy|trywanu}}
 * Westrobothnian: {{t|gmq-bot|såla}}
