t+cv:[[ӗм]] ([[WT:EDIT|Assisted]]) <suck#48144477>

--- a/en/s/suck.8436.wikitext
+++ b/en/s/suck.8436.wikitext
@@ -95,6 +95,7 @@ From {{etyl|enm|en}} {{m|enm|souken|souken, suken|}}, from {{etyl|ang|en}} {{m|a
 * Catalan: {{t+|ca|xuclar}}
 * Chinese:
 *: Mandarin: {{t+|cmn|吸吮}}
+* Chuvash: {{t|cv|ӗм}}
 * Corsican: {{t+|co|suchjà}}
 * Czech: {{t+|cs|sát}}, {{t|cs|nasávat}}
 * Danish: {{t|da|suge}}
