/* Readings */ {{ja-readings}} update, rm megumi <惠#48147900>

--- a/en/惠/惠.15605.wikitext
+++ b/en/惠/惠.15605.wikitext
@@ -53,7 +53,10 @@
 # {{defn|lang=ja|sort=心08}}
 
 ====Readings====
-* {{ja-readings|on=[[けい]] (kei), [[え]] (e)|kun=[[めぐむ]] (megumu), [[めぐみ]] (megumi)}}
+{{ja-readings
+|on=けい, え
+|kun=めぐ-む
+}}
 
 ----
 
