/* Derived terms */ Applied {{der3}} and added term <cut#48149459>

--- a/en/c/cut.6843.wikitext
+++ b/en/c/cut.6843.wikitext
@@ -171,42 +171,7 @@ From {{etyl|enm|en}} {{m|enm|cutten}}, {{m|enm|kitten}}, {{m|enm|kytten}}, {{m|e
 #: ''Don't buy his coke: it's full of '''cut'''.''
 
 ====Derived terms====
-{{rel-top3|Terms derived from ''cut'' (noun)}}
-* {{l|en|a cut above}}
-* {{l|en|a cut below}}
-* {{l|en|boot cut}}
-* {{l|en|bowl cut}}
-* {{l|en|brush cut}}
-* {{l|en|budget cut}}
-* {{l|en|crew cut}}
-* {{l|en|cut of one's jib}}
-* {{l|en|cut-set}}
-{{rel-mid3}}
-* {{l|en|die-cut}}
-* {{l|en|direct cut}}
-* {{l|en|director's cut}}
-* {{l|en|final cut}}/[[make the final cut]]
-* {{l|en|fine cut}}
-* {{l|en|French cut}}
-* {{l|en|jump cut}}/[[jump-cut]]
-* {{l|en|line cut}}
-* {{l|en|linocut}}
-* {{l|en|make the cut}}
-* {{l|en|maximum cut}}
-* {{l|en|minimum cut}}
-{{rel-mid3}}
-* {{l|en|pay cut}}
-* {{l|en|power cut}}
-* {{l|en|price cut}}
-* {{l|en|princess cut}}
-* {{l|en|rose cut}}
-* {{l|en|shaggy cut}}
-* {{l|en|shortcut}}
-* {{l|en|s-t cut}}
-* {{l|en|tax cut}}
-* {{l|en|woodcut}}
-* {{l|en|α-cut}}
-{{rel-bottom}}
+{{der3|lang=en|title=Terms derived from ''cut'' (noun)|a cut above|a cut below|boot cut|bowl cut|brush cut|budget cut|crew cut|cut of one's jib|cut-set|die-cut|direct cut|director's cut|{{l|en|final cut}}, {{l|en|make the final cut}}|fine cut|French cut|{{l|en|jump cut}}, {{l|en|jump-cut}}|line cut|linocut|make the cut|maximum cut|minimum cut|pay cut|power cut|price cut|prime cut|princess cut|rose cut|shaggy cut|shortcut|s-t cut|tax cut|woodcut|α-cut}}
 
 ====Translations====
 {{trans-top|opening resulting from cutting}}
