/* Readings */ {{ja-readings}} update, and unicode needs to redo han unification <倶#48159695>

--- a/en/倶/倶.11073.wikitext
+++ b/en/倶/倶.11073.wikitext
@@ -30,7 +30,12 @@
 # {{defn|lang=ja|sort=人08}}
 
 ====Readings====
-* {{ja-readings|kanon=[[く]] (ku)|goon=[[く]] (ku)|kanyoon=[[ぐ]] (gu)|kun=[[ともに]] (tomoni)}}
+{{ja-readings
+|goon=く
+|kanon=く
+|kanyoon=ぐ
+|kun=とも-に
+}}
 
 ====Compounds====
 * [[倶楽部]] (''kurabu''): club
