+rhyme [[Rhymes:English/ɒt|-ɒt]] <caught#48163387>

--- a/en/c/caught.6831.wikitext
+++ b/en/c/caught.6831.wikitext
@@ -13,6 +13,7 @@
 * {{homophones|lang=en|cot}} {{qualifier|accents with cot-caught merger}}
 * {{homophones|lang=en|court}} {{qualifier|non-rhotic accents}}
 * {{rhymes|ɔːt|lang=en}}
+* {{rhymes|ɒt|lang=en}}
 
 ===Adjective===
 {{en-adj|-}}
