--- a/en/坡/坡.13028.wikitext
+++ b/en/坡/坡.13028.wikitext
@@ -46,7 +46,12 @@
 # {{defn|lang=ja|sort=土05}}
 
 ====Readings====
-* {{ja-readings|goon=[[は]] (ha)|on=[[ひ]] (hi)|kun=[[つつみ]] (tsutsumi)}}
+* {{ja-readings
+|goon=は
+|kanon=は
+|on=ひ
+|kun=つつ-み
+}}
 
 ----
 
